// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`様式の罫線 > 第1表 の罫線が変わっていない 1`] = `
"セル 317個 / 格子 縦44本 横48本
寄せで動いたセル 79個（最大 0.030％）
縦罫線 89本
0.00 [1.32–3.53] 0.5px
0.00 [5.75–94.46] 0.5px
0.00 [95.64–100.00] 0.5px
2.44 [31.94–94.46] 0.5px
4.88 [57.71–66.30] 0.5px
4.88 [82.27–88.71] 0.5px
4.88 [97.85–100.00] 0.5px
7.31 [1.32–3.53] 0.5px
7.31 [97.85–100.00] 0.5px
8.60 [12.23–16.52] 1px 破線
9.71 [1.32–3.53] 0.5px
9.71 [25.42–28.16] 0.5px
9.71 [77.97–82.27] 0.5px
12.15 [5.75–9.87] 0.5px
12.15 [44.82–46.97] 0.5px
12.15 [49.12–53.41] 0.5px
14.54 [53.41–55.56] 0.5px
16.94 [95.64–97.85] 0.5px
19.33 [95.64–97.85] 0.5px
20.80 [12.23–16.52] 1px 破線
21.81 [1.32–3.53] 0.5px
21.81 [4.19–94.46] 0.5px
23.98 [5.75–9.87] 0.5px
23.98 [12.23–16.52] 0.5px
23.98 [18.88–23.07] 0.5px
23.98 [31.94–94.46] 0.5px
26.15 [31.94–44.82] 0.5px
26.15 [46.97–49.12] 0.5px
26.15 [51.26–94.46] 0.5px
28.32 [0.00–3.53] 0.5px
28.32 [42.67–44.82] 0.5px
28.32 [97.85–100.00] 0.5px
30.50 [44.82–46.97] 0.5px
32.67 [12.23–16.52] 0.5px
32.67 [44.82–46.97] 0.5px
34.84 [0.00–3.53] 0.5px
34.84 [44.82–46.97] 0.5px
34.84 [97.85–100.00] 0.5px
36.98 [0.00–3.53] 0.5px
36.98 [25.42–28.16] 0.5px
36.98 [97.85–100.00] 0.5px
39.18 [12.23–16.52] 0.5px
39.18 [25.42–28.16] 0.5px
43.50 [0.00–3.53] 0.5px
45.70 [12.23–16.52] 0.5px
50.04 [0.00–3.53] 0.5px
52.22 [5.75–9.87] 0.5px
52.22 [12.23–16.52] 0.5px
54.39 [13.79–16.52] 0.5px
56.56 [0.00–3.53] 0.5px
60.90 [4.19–94.46] 0.5px
60.90 [97.85–100.00] 0.5px
63.07 [0.00–3.53] 0.5px
63.07 [5.75–25.42] 0.5px
63.07 [31.94–44.82] 0.5px
63.07 [49.12–94.46] 0.5px
65.24 [28.16–30.38] 0.5px
67.41 [25.42–30.38] 0.5px
67.41 [95.64–100.00] 0.5px
69.59 [25.42–28.16] 0.5px
71.76 [12.23–16.52] 0.5px
71.76 [28.16–30.38] 0.5px
71.76 [97.85–100.00] 0.5px
73.94 [97.85–100.00] 0.5px
76.10 [0.00–3.53] 0.5px
76.10 [25.42–30.38] 0.5px
78.27 [0.00–3.53] 0.5px
78.27 [12.23–16.52] 0.5px
78.27 [25.42–30.38] 0.5px
78.27 [97.85–100.00] 0.5px
80.45 [95.64–97.85] 0.5px
82.62 [0.00–3.53] 0.5px
82.62 [28.16–30.38] 0.5px
82.62 [95.64–97.85] 0.5px
84.79 [12.23–16.52] 0.5px
84.79 [97.85–100.00] 0.5px
86.97 [97.85–100.00] 0.5px
91.31 [4.19–9.87] 0.5px
91.31 [12.23–16.52] 0.5px
91.31 [95.64–100.00] 0.5px
93.48 [5.75–9.87] 0.5px
93.48 [13.79–16.52] 0.5px
93.48 [28.16–30.38] 0.5px
95.65 [28.16–30.38] 0.5px
95.65 [95.64–100.00] 0.5px
97.83 [97.85–100.00] 0.5px
99.99 [0.00–3.53] 0.5px
99.99 [4.19–94.46] 0.5px
99.99 [95.64–100.00] 0.5px
横罫線 54本
0.00 [28.32–99.99] 0.5px
1.32 [0.00–28.32] 0.5px
1.32 [34.84–63.07] 0.5px
1.32 [82.62–99.99] 0.5px
3.53 [0.00–99.99] 0.5px
4.19 [21.81–99.99] 0.5px
5.75 [0.00–99.99] 0.5px
7.31 [0.00–12.15] 0.5px
7.31 [21.81–52.22] 0.5px
7.31 [60.90–91.31] 0.5px
9.87 [0.00–99.99] 0.5px
12.23 [0.00–99.99] 0.5px
12.23 [8.60–20.80] 1px 破線
13.79 [21.81–99.99] 0.5px
16.52 [0.00–99.99] 0.5px
16.52 [8.60–20.80] 1px 破線
18.88 [0.00–99.99] 0.5px
23.07 [0.00–99.99] 0.5px
25.42 [0.00–99.99] 0.5px
28.16 [0.00–99.99] 0.5px
30.38 [0.00–99.99] 0.5px
31.94 [0.00–99.99] 0.5px
34.08 [2.44–99.99] 0.5px
36.23 [2.44–99.99] 0.5px
38.38 [2.44–99.99] 0.5px
40.53 [2.44–99.99] 0.5px
42.67 [2.44–99.99] 0.5px
44.82 [0.00–99.99] 0.5px
46.97 [2.44–99.99] 0.5px
49.12 [2.44–99.99] 0.5px
51.26 [12.15–99.99] 0.5px
53.41 [2.44–99.99] 0.5px
55.56 [2.44–99.99] 0.5px
57.71 [0.00–99.99] 0.5px
59.85 [4.88–99.99] 0.5px
62.00 [4.88–99.99] 0.5px
64.15 [4.88–99.99] 0.5px
66.30 [2.44–99.99] 0.5px
69.38 [2.44–99.99] 0.5px
71.53 [2.44–99.99] 0.5px
73.68 [2.44–99.99] 0.5px
75.82 [2.44–99.99] 0.5px
77.97 [2.44–99.99] 0.5px
80.12 [9.71–99.99] 0.5px
82.27 [0.00–99.99] 0.5px
84.41 [4.88–99.99] 0.5px
86.56 [4.88–99.99] 0.5px
88.71 [2.44–99.99] 0.5px
90.86 [2.44–99.99] 0.5px
94.46 [0.00–99.99] 0.5px
95.64 [0.00–99.99] 0.5px
96.47 [80.45–99.99] 0.5px
97.85 [0.00–99.99] 0.5px
100.00 [0.00–99.99] 0.5px"
`;

exports[`様式の罫線 > 第1表（続） の罫線が変わっていない 1`] = `
"セル 285個 / 格子 縦37本 横44本
寄せで動いたセル 58個（最大 0.030％）
縦罫線 62本
0.00 [0.00–3.78] 0.5px
0.00 [6.12–100.00] 0.5px
2.44 [33.83–100.00] 0.5px
4.88 [61.11–70.20] 0.5px
4.88 [87.10–93.91] 0.5px
8.60 [12.98–17.52] 1px 破線
9.71 [26.94–29.84] 0.5px
9.71 [82.55–87.10] 0.5px
12.15 [6.12–10.48] 0.5px
12.15 [47.47–49.74] 0.5px
12.15 [52.02–56.56] 0.5px
14.54 [56.56–58.83] 0.5px
16.94 [0.00–3.78] 0.5px
19.33 [0.00–3.78] 0.5px
20.80 [12.98–17.52] 1px 破線
21.81 [4.47–100.00] 0.5px
23.98 [0.00–3.78] 0.5px
23.98 [6.12–26.94] 0.5px
23.98 [33.83–100.00] 0.5px
26.15 [29.84–32.18] 0.5px
26.15 [33.83–47.47] 0.5px
26.15 [52.02–100.00] 0.5px
28.32 [26.94–32.18] 0.5px
30.50 [26.94–29.84] 0.5px
32.67 [12.98–17.52] 0.5px
32.67 [29.84–32.18] 0.5px
37.01 [26.94–32.18] 0.5px
39.18 [12.98–17.52] 0.5px
39.18 [26.94–32.18] 0.5px
43.50 [0.00–3.78] 0.5px
43.50 [29.84–32.18] 0.5px
45.70 [12.98–17.52] 0.5px
52.22 [4.47–10.48] 0.5px
52.22 [12.98–17.52] 0.5px
54.39 [6.12–10.48] 0.5px
54.39 [14.63–17.52] 0.5px
54.39 [29.84–32.18] 0.5px
56.56 [29.84–32.18] 0.5px
60.90 [0.00–3.78] 0.5px
60.90 [4.47–100.00] 0.5px
63.07 [6.12–26.94] 0.5px
63.07 [33.83–47.47] 0.5px
63.07 [52.02–100.00] 0.5px
65.24 [29.84–32.18] 0.5px
67.41 [26.94–32.18] 0.5px
69.59 [26.94–29.84] 0.5px
71.76 [12.98–17.52] 0.5px
71.76 [29.84–32.18] 0.5px
76.10 [26.94–32.18] 0.5px
78.27 [12.98–17.52] 0.5px
78.27 [26.94–32.18] 0.5px
82.62 [0.00–3.78] 0.5px
82.62 [29.84–32.18] 0.5px
84.79 [12.98–17.52] 0.5px
91.31 [4.47–10.48] 0.5px
91.31 [12.98–17.52] 0.5px
93.48 [6.12–10.48] 0.5px
93.48 [14.63–17.52] 0.5px
93.48 [29.84–32.18] 0.5px
95.65 [29.84–32.18] 0.5px
99.99 [0.00–3.78] 0.5px
99.99 [4.47–100.00] 0.5px
横罫線 53本
0.00 [0.00–23.98] 0.5px
0.00 [43.50–60.90] 0.5px
0.00 [82.62–99.99] 0.5px
1.43 [43.50–60.90] 0.5px
1.43 [82.62–99.99] 0.5px
3.78 [0.00–23.98] 0.5px
3.78 [43.50–60.90] 0.5px
3.78 [82.62–99.99] 0.5px
4.47 [21.81–99.99] 0.5px
6.12 [0.00–99.99] 0.5px
7.77 [0.00–12.15] 0.5px
7.77 [21.81–52.22] 0.5px
7.77 [60.90–91.31] 0.5px
10.48 [0.00–99.99] 0.5px
12.98 [0.00–99.99] 0.5px
12.98 [8.60–20.80] 1px 破線
14.63 [21.81–99.99] 0.5px
17.52 [0.00–99.99] 0.5px
17.52 [8.60–20.80] 1px 破線
20.01 [0.00–99.99] 0.5px
24.45 [0.00–99.99] 0.5px
26.94 [0.00–99.99] 0.5px
29.84 [0.00–99.99] 0.5px
32.18 [0.00–99.99] 0.5px
33.83 [0.00–99.99] 0.5px
36.11 [2.44–99.99] 0.5px
38.38 [2.44–99.99] 0.5px
40.65 [2.44–99.99] 0.5px
42.93 [2.44–99.99] 0.5px
45.20 [2.44–99.99] 0.5px
47.47 [0.00–99.99] 0.5px
49.74 [2.44–23.98] 0.5px
52.02 [2.44–99.99] 0.5px
54.29 [12.15–99.99] 0.5px
56.56 [2.44–99.99] 0.5px
58.83 [2.44–99.99] 0.5px
61.11 [0.00–99.99] 0.5px
63.38 [4.88–99.99] 0.5px
65.65 [4.88–99.99] 0.5px
67.93 [4.88–99.99] 0.5px
70.20 [2.44–99.99] 0.5px
73.46 [2.44–99.99] 0.5px
75.73 [2.44–99.99] 0.5px
78.01 [2.44–99.99] 0.5px
80.28 [2.44–99.99] 0.5px
82.55 [2.44–99.99] 0.5px
84.82 [9.71–99.99] 0.5px
87.10 [0.00–99.99] 0.5px
89.37 [4.88–99.99] 0.5px
91.64 [4.88–99.99] 0.5px
93.91 [2.44–99.99] 0.5px
96.19 [2.44–99.99] 0.5px
100.00 [0.00–99.99] 0.5px"
`;

exports[`様式の罫線 > 第2表 の罫線が変わっていない 1`] = `
"セル 196個 / 格子 縦35本 横40本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 53本
0.00 [2.29–89.13] 0.5px
2.07 [30.04–77.96] 0.5px
2.07 [91.84–100.00] 0.5px
8.26 [13.04–21.39] 0.5px
10.33 [13.04–21.39] 0.5px
12.39 [77.96–83.23] 0.5px
14.46 [24.86–83.23] 0.5px
16.53 [30.04–83.23] 0.5px
16.53 [91.84–100.00] 0.5px
22.72 [8.08–21.39] 0.5px
22.72 [21.69–83.23] 0.5px
24.79 [30.04–33.47] 0.5px
24.79 [34.58–41.44] 0.5px
24.79 [42.58–49.45] 0.5px
24.79 [50.55–57.42] 0.5px
24.79 [58.56–65.42] 0.5px
24.79 [66.53–73.39] 0.5px
24.79 [74.53–77.96] 0.5px
26.85 [77.96–83.23] 0.5px
26.85 [91.84–100.00] 0.5px
32.86 [21.69–83.23] 0.5px
33.24 [21.69–83.23] 0.5px
35.12 [30.04–77.96] 0.5px
37.18 [91.84–100.00] 0.5px
39.25 [13.04–17.27] 0.5px
41.31 [13.04–17.27] 0.5px
41.31 [13.04–17.27] 1.5px
47.51 [91.84–100.00] 0.5px
49.58 [13.04–17.27] 0.5px
49.58 [13.04–17.27] 1.5px
49.58 [24.86–83.23] 0.5px
51.64 [30.04–83.23] 0.5px
53.71 [13.04–17.27] 0.5px
55.77 [13.04–17.27] 0.5px
55.77 [13.04–17.27] 1.5px
57.84 [0.00–2.29] 0.5px
57.84 [91.84–100.00] 0.5px
65.92 [8.08–21.39] 0.5px
65.92 [13.04–17.27] 1.5px
65.92 [21.69–83.23] 0.5px
66.29 [21.69–83.23] 0.5px
68.17 [30.04–77.96] 0.5px
68.17 [91.84–100.00] 0.5px
72.30 [0.00–2.29] 0.5px
74.37 [0.00–2.29] 0.5px
76.43 [13.04–21.39] 0.5px
78.50 [13.04–21.39] 0.5px
78.50 [91.84–100.00] 0.5px
82.63 [24.86–83.23] 0.5px
85.54 [30.04–83.23] 0.5px
89.67 [91.84–100.00] 0.5px
100.00 [0.00–89.13] 0.5px
100.00 [91.84–100.00] 0.5px
横罫線 60本
0.00 [57.84–100.00] 0.5px
2.29 [0.00–100.00] 0.5px
8.08 [0.00–100.00] 0.5px
10.75 [22.72–65.92] 0.5px
13.04 [0.00–100.00] 0.5px
13.04 [41.31–49.58] 1.5px
13.04 [55.77–65.92] 1.5px
17.27 [0.00–100.00] 0.5px
17.27 [41.31–49.58] 1.5px
17.27 [55.77–65.92] 1.5px
21.39 [0.00–100.00] 0.5px
21.69 [0.00–100.00] 0.5px
24.86 [0.00–22.72] 0.5px
24.86 [33.24–65.92] 0.5px
24.86 [66.29–100.00] 0.5px
30.04 [0.00–32.86] 0.5px
30.04 [33.24–65.92] 0.5px
30.04 [66.29–100.00] 0.5px
33.47 [22.72–32.86] 0.5px
33.93 [23.76–31.83] 0.5px
34.58 [22.72–32.86] 0.5px
38.01 [0.00–32.86] 0.5px
38.01 [33.24–65.92] 0.5px
38.01 [66.29–100.00] 0.5px
41.44 [22.72–32.86] 0.5px
41.90 [23.76–31.83] 0.5px
42.58 [22.72–32.86] 0.5px
46.02 [0.00–32.86] 0.5px
46.02 [33.24–65.92] 0.5px
46.02 [66.29–100.00] 0.5px
49.45 [22.72–32.86] 0.5px
49.90 [23.76–31.83] 0.5px
50.55 [22.72–32.86] 0.5px
53.98 [0.00–32.86] 0.5px
53.98 [33.24–65.92] 0.5px
53.98 [66.29–100.00] 0.5px
57.42 [22.72–32.86] 0.5px
57.87 [23.76–31.83] 0.5px
58.56 [22.72–32.86] 0.5px
61.99 [0.00–32.86] 0.5px
61.99 [33.24–65.92] 0.5px
61.99 [66.29–100.00] 0.5px
65.42 [22.72–32.86] 0.5px
65.88 [23.76–31.83] 0.5px
66.53 [22.72–32.86] 0.5px
69.96 [0.00–32.86] 0.5px
69.96 [33.24–65.92] 0.5px
69.96 [66.29–100.00] 0.5px
73.39 [22.72–32.86] 0.5px
73.85 [23.76–31.83] 0.5px
74.53 [22.72–32.86] 0.5px
77.96 [0.00–32.86] 0.5px
77.96 [33.24–65.92] 0.5px
77.96 [66.29–100.00] 0.5px
83.23 [0.00–100.00] 0.5px
89.13 [0.00–100.00] 0.5px
91.84 [2.07–100.00] 0.5px
95.04 [2.07–100.00] 0.5px
97.60 [2.07–100.00] 0.5px
100.00 [2.07–100.00] 0.5px"
`;

exports[`様式の罫線 > 第4表 の罫線が変わっていない 1`] = `
"セル 76個 / 格子 縦15本 横11本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 15本
0.00 [2.81–100.00] 0.5px
7.69 [24.63–52.44] 0.5px
28.87 [17.65–68.72] 0.5px
30.74 [10.67–68.72] 0.5px
32.71 [10.67–68.72] 0.5px
48.08 [10.67–68.72] 0.5px
49.96 [10.67–68.72] 0.5px
59.61 [0.00–2.81] 0.5px
65.33 [10.67–68.72] 0.5px
67.29 [10.67–68.72] 0.5px
73.01 [0.00–2.81] 0.5px
74.98 [0.00–2.81] 0.5px
82.66 [10.67–68.72] 0.5px
84.54 [10.67–68.72] 0.5px
100.00 [0.00–100.00] 0.5px
横罫線 11本
0.00 [59.61–100.00] 0.5px
2.81 [0.00–100.00] 0.5px
10.67 [0.00–100.00] 0.5px
17.65 [0.00–100.00] 0.5px
24.63 [0.00–100.00] 0.5px
32.90 [7.69–100.00] 0.5px
44.83 [7.69–100.00] 0.5px
52.44 [0.00–100.00] 0.5px
60.38 [0.00–100.00] 0.5px
68.72 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第4表の2 の罫線が変わっていない 1`] = `
"セル 270個 / 格子 縦18本 横39本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 69本
0.00 [1.73–100.00] 0.5px
3.13 [26.78–30.70] 0.5px
3.13 [56.26–59.77] 0.5px
3.13 [85.76–90.51] 0.5px
6.34 [23.23–30.70] 0.5px
6.34 [52.54–59.77] 0.5px
6.34 [82.51–90.51] 0.5px
9.56 [6.07–95.88] 0.5px
42.75 [10.12–21.27] 0.5px
42.75 [23.23–35.61] 0.5px
42.75 [39.69–50.95] 0.5px
42.75 [52.54–64.62] 0.5px
42.75 [68.67–80.82] 0.5px
42.75 [82.51–98.31] 0.5px
44.57 [4.22–7.93] 0.5px
44.57 [10.12–21.27] 0.5px
44.57 [23.23–37.84] 0.5px
44.57 [39.69–50.95] 0.5px
44.57 [52.54–66.48] 0.5px
44.57 [68.67–80.82] 0.5px
44.57 [82.51–98.31] 0.5px
48.31 [4.22–7.93] 0.5px
48.31 [10.12–21.27] 0.5px
48.31 [23.23–37.84] 0.5px
48.31 [39.69–50.95] 0.5px
48.31 [52.54–66.48] 0.5px
48.31 [68.67–80.82] 0.5px
48.31 [82.51–98.31] 0.5px
59.34 [6.07–7.93] 0.5px
59.34 [35.61–37.84] 0.5px
59.34 [64.62–66.48] 0.5px
61.29 [0.00–1.73] 0.5px
63.08 [4.22–7.93] 0.5px
63.08 [10.12–21.27] 0.5px
63.08 [23.23–37.84] 0.5px
63.08 [39.69–50.95] 0.5px
63.08 [52.54–66.48] 0.5px
63.08 [68.67–80.82] 0.5px
63.08 [82.51–98.31] 0.5px
66.72 [4.22–7.93] 0.5px
66.72 [10.12–21.27] 0.5px
66.72 [23.23–37.84] 0.5px
66.72 [39.69–50.95] 0.5px
66.72 [52.54–66.48] 0.5px
66.72 [68.67–80.82] 0.5px
66.72 [82.51–98.31] 0.5px
72.33 [0.00–1.73] 0.5px
76.06 [0.00–1.73] 0.5px
77.85 [6.07–7.93] 0.5px
77.85 [35.61–37.84] 0.5px
77.85 [64.62–66.48] 0.5px
81.49 [4.22–7.93] 0.5px
81.49 [10.12–21.27] 0.5px
81.49 [23.23–37.84] 0.5px
81.49 [39.69–50.95] 0.5px
81.49 [52.54–66.48] 0.5px
81.49 [68.67–80.82] 0.5px
81.49 [82.51–98.31] 0.5px
85.23 [4.22–7.93] 0.5px
85.23 [10.12–21.27] 0.5px
85.23 [23.23–37.84] 0.5px
85.23 [39.69–50.95] 0.5px
85.23 [52.54–66.48] 0.5px
85.23 [68.67–80.82] 0.5px
85.23 [82.51–98.31] 0.5px
96.26 [6.07–7.93] 0.5px
96.26 [35.61–37.84] 0.5px
96.26 [64.62–66.48] 0.5px
100.00 [0.00–100.00] 0.5px
横罫線 39本
0.00 [61.29–100.00] 0.5px
1.73 [0.00–100.00] 0.5px
4.22 [0.00–100.00] 0.5px
6.07 [0.00–100.00] 0.5px
7.93 [9.56–100.00] 0.5px
10.12 [9.56–100.00] 0.5px
12.55 [9.56–100.00] 0.5px
16.26 [9.56–100.00] 0.5px
18.79 [9.56–100.00] 0.5px
21.27 [9.56–100.00] 0.5px
23.23 [0.00–100.00] 0.5px
26.78 [0.00–100.00] 0.5px
30.70 [0.00–100.00] 0.5px
33.29 [9.56–100.00] 0.5px
35.61 [0.00–100.00] 0.5px
37.84 [9.56–100.00] 0.5px
39.69 [9.56–100.00] 0.5px
42.02 [9.56–100.00] 0.5px
45.93 [9.56–100.00] 0.5px
48.62 [9.56–100.00] 0.5px
50.95 [9.56–100.00] 0.5px
52.54 [0.00–100.00] 0.5px
56.26 [0.00–100.00] 0.5px
59.77 [0.00–100.00] 0.5px
62.20 [9.56–100.00] 0.5px
64.62 [0.00–100.00] 0.5px
66.48 [9.56–100.00] 0.5px
68.67 [9.56–100.00] 0.5px
71.46 [9.56–100.00] 0.5px
75.64 [9.56–100.00] 0.5px
78.23 [9.56–100.00] 0.5px
80.82 [9.56–100.00] 0.5px
82.51 [0.00–100.00] 0.5px
85.76 [0.00–100.00] 0.5px
90.51 [0.00–100.00] 0.5px
93.20 [9.56–100.00] 0.5px
95.88 [0.00–100.00] 0.5px
98.31 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第5表 の罫線が変わっていない 1`] = `
"セル 160個 / 格子 縦34本 横41本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 113本
0.00 [3.69–6.75] 0.5px
0.00 [7.27–33.03] 0.5px
0.00 [11.63–22.45] 1px
0.00 [33.31–39.00] 0.5px
0.00 [39.28–52.95] 0.5px
0.00 [53.44–83.66] 0.5px
0.00 [58.15–71.57] 1px
0.00 [83.94–89.14] 0.5px
0.00 [89.42–100.00] 0.5px
1.97 [36.16–39.00] 0.5px
1.97 [86.58–89.14] 0.5px
7.69 [22.45–33.03] 0.5px
7.69 [71.57–83.66] 0.5px
9.65 [30.18–33.03] 0.5px
9.65 [81.13–83.66] 0.5px
19.21 [11.63–22.45] 1px
19.21 [13.95–22.45] 0.5px
19.21 [58.15–71.57] 0.5px
21.18 [13.95–19.57] 0.5px
21.18 [60.44–68.13] 0.5px
23.06 [22.45–33.03] 0.5px
23.06 [71.57–83.66] 0.5px
25.02 [30.18–33.03] 0.5px
25.02 [33.31–39.00] 0.5px
25.02 [39.28–41.92] 0.5px
25.02 [39.28–44.98] 1px
25.02 [44.98–50.56] 0.5px
25.02 [81.13–83.66] 0.5px
25.02 [83.94–89.14] 0.5px
25.02 [89.42–98.14] 0.5px
26.90 [36.16–39.00] 0.5px
26.90 [41.92–44.98] 0.5px
26.90 [86.58–89.14] 0.5px
26.90 [92.16–95.15] 0.5px
28.87 [41.92–44.98] 0.5px
28.87 [92.16–95.15] 0.5px
38.43 [24.95–33.03] 0.5px
38.43 [75.44–83.66] 0.5px
40.39 [13.95–19.57] 0.5px
40.39 [30.18–33.03] 0.5px
40.39 [60.44–68.13] 0.5px
40.39 [81.13–83.66] 0.5px
42.27 [13.95–16.23] 0.5px
42.27 [17.29–19.57] 0.5px
42.27 [60.44–63.74] 0.5px
42.27 [64.83–68.13] 0.5px
44.24 [13.95–16.23] 0.5px
44.24 [17.29–19.57] 0.5px
44.24 [60.44–63.74] 0.5px
44.24 [64.83–68.13] 0.5px
48.08 [92.16–95.15] 0.5px
49.96 [33.31–39.00] 0.5px
49.96 [41.92–44.98] 0.5px
49.96 [83.94–89.14] 0.5px
49.96 [89.42–95.15] 0.5px
51.92 [36.16–39.00] 0.5px
51.92 [39.28–44.98] 0.5px
51.92 [86.58–89.14] 0.5px
51.92 [92.16–95.15] 0.5px
53.80 [24.95–33.03] 0.5px
53.80 [41.92–44.98] 0.5px
53.80 [75.44–83.66] 0.5px
55.76 [13.95–16.23] 0.5px
55.76 [17.29–19.57] 0.5px
55.76 [30.18–33.03] 0.5px
55.76 [60.44–63.74] 0.5px
55.76 [64.83–68.13] 0.5px
55.76 [81.13–83.66] 0.5px
57.64 [13.95–19.57] 0.5px
57.64 [60.44–68.13] 0.5px
59.61 [0.00–3.69] 0.5px
59.61 [13.95–19.57] 0.5px
59.61 [60.44–68.13] 0.5px
59.61 [60.44–68.13] 1px
69.17 [22.45–33.03] 0.5px
69.17 [71.57–83.66] 0.5px
71.13 [30.18–33.03] 0.5px
71.13 [81.13–83.66] 0.5px
73.01 [0.00–3.69] 0.5px
73.01 [41.92–44.98] 0.5px
73.01 [92.16–95.15] 0.5px
74.98 [0.00–3.69] 0.5px
74.98 [13.95–19.57] 0.5px
74.98 [33.31–39.00] 0.5px
74.98 [39.28–50.56] 0.5px
74.98 [60.44–68.13] 1px
74.98 [83.94–89.14] 0.5px
74.98 [89.42–98.14] 0.5px
76.85 [36.16–39.00] 0.5px
76.85 [39.28–50.56] 0.5px
76.85 [86.58–89.14] 0.5px
76.85 [89.42–98.14] 0.5px
78.82 [11.63–22.45] 0.5px
78.82 [39.28–50.56] 0.5px
78.82 [58.15–71.57] 0.5px
78.82 [89.42–98.14] 0.5px
80.70 [11.63–22.45] 0.5px
80.70 [58.15–71.57] 0.5px
82.66 [11.63–22.45] 0.5px
82.66 [58.15–71.57] 0.5px
84.54 [22.45–33.03] 0.5px
84.54 [71.57–83.66] 0.5px
86.51 [30.18–33.03] 0.5px
86.51 [81.13–83.66] 0.5px
100.00 [0.00–6.75] 0.5px
100.00 [7.27–33.03] 0.5px
100.00 [11.63–22.45] 1px
100.00 [33.31–39.00] 0.5px
100.00 [39.28–52.95] 0.5px
100.00 [53.44–83.66] 0.5px
100.00 [58.15–71.57] 1px
100.00 [83.94–89.14] 0.5px
100.00 [89.42–100.00] 0.5px
横罫線 55本
0.00 [59.61–100.00] 0.5px
3.69 [0.00–100.00] 0.5px
6.75 [0.00–100.00] 0.5px
7.27 [0.00–100.00] 0.5px
11.63 [0.00–100.00] 0.5px
11.63 [0.00–100.00] 1px
13.95 [19.21–40.39] 0.5px
13.95 [42.27–55.76] 0.5px
13.95 [57.64–74.98] 0.5px
16.23 [42.27–55.76] 0.5px
16.65 [44.24–55.76] 0.5px
17.29 [42.27–55.76] 0.5px
19.57 [19.21–40.39] 0.5px
19.57 [42.27–55.76] 0.5px
19.57 [57.64–74.98] 0.5px
22.45 [0.00–100.00] 0.5px
22.45 [0.00–100.00] 1px
24.95 [23.06–69.17] 0.5px
30.18 [7.69–100.00] 0.5px
33.03 [0.00–100.00] 0.5px
33.31 [0.00–100.00] 0.5px
36.16 [0.00–100.00] 0.5px
39.00 [0.00–100.00] 0.5px
39.28 [0.00–100.00] 0.5px
41.92 [25.02–74.98] 0.5px
44.98 [0.00–100.00] 0.5px
50.56 [0.00–100.00] 0.5px
52.95 [0.00–100.00] 0.5px
53.44 [0.00–100.00] 0.5px
58.15 [0.00–100.00] 0.5px
58.15 [0.00–100.00] 1px
60.44 [19.21–40.39] 0.5px
60.44 [42.27–55.76] 0.5px
60.44 [57.64–59.61] 0.5px
60.44 [59.61–74.98] 1px
63.74 [42.27–55.76] 0.5px
64.16 [44.24–55.76] 0.5px
64.83 [42.27–55.76] 0.5px
68.13 [19.21–40.39] 0.5px
68.13 [42.27–55.76] 0.5px
68.13 [57.64–59.61] 0.5px
68.13 [59.61–74.98] 1px
71.57 [0.00–100.00] 0.5px
71.57 [0.00–100.00] 1px
75.44 [23.06–69.17] 0.5px
81.13 [7.69–100.00] 0.5px
83.66 [0.00–100.00] 0.5px
83.94 [0.00–100.00] 0.5px
86.58 [0.00–100.00] 0.5px
89.14 [0.00–100.00] 0.5px
89.42 [0.00–100.00] 0.5px
92.16 [25.02–74.98] 0.5px
95.15 [0.00–100.00] 0.5px
98.14 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第6表 の罫線が変わっていない 1`] = `
"セル 206個 / 格子 縦29本 横30本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 99本
0.00 [3.40–48.91] 0.5px
0.00 [49.29–100.00] 0.5px
15.05 [9.63–24.59] 0.5px
15.05 [28.74–32.14] 0.5px
15.05 [39.01–47.18] 0.5px
15.05 [58.40–74.80] 0.5px
15.05 [78.67–82.07] 0.5px
15.05 [88.54–98.27] 0.5px
16.95 [6.22–24.59] 0.5px
16.95 [28.74–32.14] 0.5px
16.95 [35.61–47.18] 0.5px
16.95 [52.14–74.80] 0.5px
16.95 [78.67–82.07] 0.5px
16.95 [85.14–98.27] 0.5px
18.81 [16.50–19.90] 0.5px
18.81 [65.20–68.61] 0.5px
20.72 [6.22–13.10] 0.5px
20.72 [19.90–24.59] 0.5px
20.72 [28.74–32.14] 0.5px
20.72 [35.61–47.18] 0.5px
20.72 [54.93–61.80] 0.5px
20.72 [68.61–74.80] 0.5px
20.72 [78.67–82.07] 0.5px
20.72 [85.14–98.27] 0.5px
22.57 [16.50–19.90] 0.5px
22.57 [65.20–68.61] 0.5px
28.24 [13.10–16.50] 0.5px
28.24 [61.80–65.20] 0.5px
32.00 [13.10–16.50] 0.5px
32.00 [61.80–65.20] 0.5px
35.76 [9.63–16.50] 0.5px
35.76 [58.40–65.20] 0.5px
37.62 [6.22–24.59] 0.5px
37.62 [28.74–32.14] 0.5px
37.62 [35.61–47.18] 0.5px
37.62 [54.93–74.80] 0.5px
37.62 [78.67–82.07] 0.5px
37.62 [85.14–98.27] 0.5px
39.53 [16.50–19.90] 0.5px
39.53 [65.20–68.61] 0.5px
41.38 [6.22–13.10] 0.5px
41.38 [19.90–24.59] 0.5px
41.38 [28.74–32.14] 0.5px
41.38 [35.61–47.18] 0.5px
41.38 [54.93–61.80] 0.5px
41.38 [68.61–74.80] 0.5px
41.38 [78.67–82.07] 0.5px
41.38 [85.14–98.27] 0.5px
43.29 [16.50–19.90] 0.5px
43.29 [65.20–68.61] 0.5px
48.91 [13.10–16.50] 0.5px
48.91 [61.80–65.20] 0.5px
52.67 [13.10–16.50] 0.5px
52.67 [61.80–65.20] 0.5px
56.43 [9.63–16.50] 0.5px
56.43 [58.40–65.20] 0.5px
58.34 [0.00–3.40] 0.5px
58.34 [6.22–24.59] 0.5px
58.34 [28.74–32.14] 0.5px
58.34 [35.61–47.18] 0.5px
58.34 [52.14–74.80] 0.5px
58.34 [78.67–82.07] 0.5px
58.34 [85.14–98.27] 0.5px
60.20 [16.50–19.90] 0.5px
60.20 [65.20–68.61] 0.5px
62.10 [6.22–13.10] 0.5px
62.10 [19.90–24.59] 0.5px
62.10 [28.74–32.14] 0.5px
62.10 [35.61–47.18] 0.5px
62.10 [54.93–61.80] 0.5px
62.10 [68.61–74.80] 0.5px
62.10 [78.67–82.07] 0.5px
62.10 [85.14–98.27] 0.5px
63.96 [16.50–19.90] 0.5px
63.96 [65.20–68.61] 0.5px
69.62 [0.00–3.40] 0.5px
69.62 [13.10–16.50] 0.5px
69.62 [61.80–65.20] 0.5px
73.39 [0.00–3.40] 0.5px
73.39 [13.10–16.50] 0.5px
73.39 [61.80–65.20] 0.5px
77.15 [9.63–16.50] 0.5px
77.15 [58.40–65.20] 0.5px
79.01 [6.22–24.59] 0.5px
79.01 [28.74–32.14] 0.5px
79.01 [35.61–47.18] 0.5px
79.01 [52.14–74.80] 0.5px
79.01 [78.67–82.07] 0.5px
79.01 [85.14–98.27] 0.5px
80.91 [28.74–32.14] 0.5px
80.91 [78.67–82.07] 0.5px
82.77 [13.10–24.59] 0.5px
82.77 [39.01–47.18] 0.5px
82.77 [61.80–74.80] 0.5px
82.77 [88.54–98.27] 0.5px
84.67 [28.74–32.14] 0.5px
84.67 [78.67–82.07] 0.5px
100.00 [0.00–48.91] 0.5px
100.00 [49.29–100.00] 0.5px
横罫線 30本
0.00 [58.34–100.00] 0.5px
3.40 [0.00–100.00] 0.5px
6.22 [0.00–100.00] 0.5px
9.63 [0.00–100.00] 0.5px
13.10 [0.00–100.00] 0.5px
16.50 [16.95–79.01] 0.5px
19.90 [0.00–100.00] 0.5px
24.59 [0.00–100.00] 0.5px
28.74 [0.00–100.00] 0.5px
32.14 [0.00–100.00] 0.5px
35.61 [0.00–100.00] 0.5px
39.01 [0.00–100.00] 0.5px
43.71 [0.00–100.00] 0.5px
47.18 [0.00–100.00] 0.5px
48.91 [0.00–100.00] 0.5px
49.29 [0.00–100.00] 0.5px
52.14 [0.00–100.00] 0.5px
54.93 [0.00–79.01] 0.5px
58.40 [0.00–100.00] 0.5px
61.80 [0.00–100.00] 0.5px
65.20 [16.95–79.01] 0.5px
68.61 [0.00–100.00] 0.5px
74.80 [0.00–100.00] 0.5px
78.67 [0.00–100.00] 0.5px
82.07 [0.00–100.00] 0.5px
85.14 [0.00–100.00] 0.5px
88.54 [0.00–100.00] 0.5px
94.80 [0.00–100.00] 0.5px
98.27 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第7表 の罫線が変わっていない 1`] = `
"セル 197個 / 格子 縦35本 横32本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 71本
0.00 [3.64–100.00] 0.5px
1.97 [10.28–13.64] 0.5px
1.97 [18.57–22.20] 0.5px
1.97 [26.96–30.84] 0.5px
1.97 [32.69–41.50] 0.5px
1.97 [49.62–69.37] 0.5px
1.97 [76.29–96.05] 0.5px
7.69 [16.99–22.20] 0.5px
13.49 [16.99–22.20] 0.5px
17.34 [45.73–69.37] 0.5px
17.34 [72.73–96.05] 0.5px
19.21 [16.99–22.20] 0.5px
19.21 [53.57–69.37] 0.5px
19.21 [80.24–96.05] 0.5px
21.18 [30.84–32.69] 0.5px
21.18 [32.69–41.50] 1px
23.06 [32.69–36.64] 0.5px
23.06 [37.55–41.50] 0.5px
25.02 [13.64–30.84] 0.5px
26.90 [18.57–22.20] 0.5px
26.90 [26.96–30.84] 0.5px
30.74 [32.69–36.64] 0.5px
30.74 [37.55–41.50] 0.5px
32.71 [16.99–22.20] 0.5px
32.71 [32.69–36.64] 0.5px
32.71 [37.55–41.50] 0.5px
32.71 [45.73–69.37] 0.5px
32.71 [72.73–96.05] 0.5px
34.58 [7.69–13.64] 0.5px
34.58 [49.62–69.37] 0.5px
34.58 [76.29–96.05] 0.5px
36.55 [10.28–13.64] 0.5px
38.43 [16.99–22.20] 0.5px
44.24 [16.99–22.20] 0.5px
49.96 [13.64–30.84] 0.5px
49.96 [32.69–36.64] 0.5px
49.96 [37.55–41.50] 0.5px
49.96 [45.73–69.37] 0.5px
49.96 [72.73–96.05] 0.5px
51.92 [16.99–22.20] 0.5px
51.92 [26.96–30.84] 0.5px
51.92 [49.62–69.37] 0.5px
51.92 [76.29–96.05] 0.5px
53.80 [49.62–69.37] 0.5px
53.80 [76.29–96.05] 0.5px
59.61 [0.00–3.64] 0.5px
63.45 [32.69–36.64] 0.5px
65.33 [32.69–36.64] 0.5px
67.29 [7.69–13.64] 0.5px
67.29 [45.73–69.37] 0.5px
67.29 [72.73–96.05] 0.5px
69.17 [10.28–13.64] 0.5px
69.17 [49.62–69.37] 0.5px
69.17 [76.29–96.05] 0.5px
71.13 [32.69–36.64] 0.5px
73.01 [0.00–3.64] 0.5px
73.01 [16.99–22.20] 0.5px
74.98 [0.00–3.64] 0.5px
74.98 [13.64–32.69] 0.5px
74.98 [32.69–41.50] 1px
76.85 [16.99–22.20] 0.5px
76.85 [26.96–30.84] 0.5px
76.85 [32.69–41.50] 0.5px
78.82 [32.69–41.50] 0.5px
82.66 [45.73–69.37] 0.5px
82.66 [72.73–96.05] 0.5px
84.54 [49.62–69.37] 0.5px
84.54 [76.29–96.05] 0.5px
92.23 [10.28–13.64] 0.5px
98.03 [16.99–22.20] 0.5px
100.00 [0.00–100.00] 0.5px
横罫線 51本
0.00 [59.61–100.00] 0.5px
3.64 [0.00–100.00] 0.5px
5.63 [0.00–100.00] 0.5px
7.69 [0.00–100.00] 0.5px
10.28 [0.00–100.00] 0.5px
13.64 [0.00–100.00] 0.5px
16.99 [0.00–100.00] 0.5px
18.57 [0.00–49.96] 0.5px
22.20 [0.00–100.00] 0.5px
26.96 [0.00–100.00] 0.5px
30.84 [0.00–100.00] 0.5px
32.69 [0.00–21.18] 0.5px
32.69 [23.06–49.96] 0.5px
32.69 [63.45–71.13] 0.5px
32.69 [74.98–100.00] 0.5px
36.64 [23.06–49.96] 0.5px
36.64 [63.45–71.13] 0.5px
37.06 [23.06–49.96] 0.5px
37.06 [65.33–71.13] 0.5px
37.55 [23.06–49.96] 0.5px
41.50 [0.00–100.00] 0.5px
41.50 [63.45–74.98] 1px
45.73 [0.00–100.00] 0.5px
49.62 [0.00–100.00] 0.5px
53.57 [0.00–49.96] 0.5px
53.57 [67.29–100.00] 0.5px
57.52 [0.00–17.34] 0.5px
57.52 [32.71–49.96] 0.5px
57.52 [67.29–100.00] 0.5px
61.47 [0.00–17.34] 0.5px
61.47 [32.71–49.96] 0.5px
61.47 [67.29–100.00] 0.5px
65.42 [0.00–17.34] 0.5px
65.42 [32.71–49.96] 0.5px
65.42 [67.29–100.00] 0.5px
69.37 [0.00–100.00] 0.5px
72.73 [0.00–100.00] 0.5px
76.29 [0.00–100.00] 0.5px
80.24 [0.00–49.96] 0.5px
80.24 [67.29–100.00] 0.5px
84.20 [0.00–17.34] 0.5px
84.20 [32.71–49.96] 0.5px
84.20 [67.29–100.00] 0.5px
88.15 [0.00–17.34] 0.5px
88.15 [32.71–49.96] 0.5px
88.15 [67.29–100.00] 0.5px
92.10 [0.00–17.34] 0.5px
92.10 [32.71–49.96] 0.5px
92.10 [67.29–100.00] 0.5px
96.05 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第8の8表 の罫線が変わっていない 1`] = `
"セル 106個 / 格子 縦9本 横27本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 17本
0.00 [3.39–38.36] 0.5px
0.00 [39.93–100.00] 0.5px
32.61 [16.28–36.07] 0.5px
32.61 [63.05–94.73] 0.5px
34.60 [9.93–36.07] 0.5px
34.60 [56.68–94.73] 0.5px
36.59 [12.32–36.07] 0.5px
36.59 [59.09–94.73] 0.5px
55.83 [0.00–3.39] 0.5px
67.30 [9.93–36.07] 0.5px
67.30 [56.68–94.73] 0.5px
69.29 [0.00–3.39] 0.5px
69.29 [12.32–36.07] 0.5px
69.29 [59.09–94.73] 0.5px
71.18 [0.00–3.39] 0.5px
100.00 [0.00–38.36] 0.5px
100.00 [39.93–100.00] 0.5px
横罫線 24本
0.00 [55.83–100.00] 0.5px
3.39 [0.00–100.00] 0.5px
9.93 [0.00–100.00] 0.5px
12.32 [34.60–100.00] 0.5px
16.28 [0.00–100.00] 0.5px
20.23 [0.00–100.00] 0.5px
24.19 [0.00–100.00] 0.5px
28.15 [0.00–100.00] 0.5px
32.11 [0.00–100.00] 0.5px
36.07 [0.00–100.00] 0.5px
38.36 [0.00–100.00] 0.5px
39.93 [0.00–100.00] 0.5px
56.68 [0.00–100.00] 0.5px
59.09 [34.60–100.00] 0.5px
63.05 [0.00–100.00] 0.5px
67.01 [0.00–100.00] 0.5px
70.97 [0.00–100.00] 0.5px
74.93 [0.00–100.00] 0.5px
78.89 [0.00–100.00] 0.5px
82.85 [0.00–100.00] 0.5px
86.81 [0.00–100.00] 0.5px
90.77 [0.00–100.00] 0.5px
94.73 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第9表 の罫線が変わっていない 1`] = `
"セル 162個 / 格子 縦27本 横30本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 38本
0.00 [3.36–100.00] 0.5px
2.51 [11.77–46.35] 0.5px
2.51 [68.53–92.17] 0.5px
20.25 [57.88–64.77] 0.5px
21.98 [9.22–46.35] 0.5px
21.98 [64.77–96.91] 0.5px
24.44 [11.77–46.35] 0.5px
24.44 [68.53–96.91] 0.5px
27.00 [92.17–96.91] 0.5px
32.26 [60.39–64.29] 0.5px
34.73 [60.39–64.29] 0.5px
40.08 [60.39–64.29] 0.5px
41.81 [9.22–46.35] 0.5px
44.36 [13.80–18.68] 0.5px
44.36 [20.72–25.60] 0.5px
44.36 [27.64–32.52] 0.5px
44.36 [34.55–39.44] 0.5px
44.36 [41.47–46.35] 0.5px
49.63 [64.77–96.91] 0.5px
52.10 [11.77–46.35] 0.5px
52.10 [68.53–96.91] 0.5px
57.45 [11.77–46.35] 0.5px
59.18 [0.00–3.36] 0.5px
62.72 [11.77–46.35] 0.5px
68.07 [9.22–46.35] 0.5px
70.53 [11.77–46.35] 0.5px
72.35 [0.00–3.36] 0.5px
74.81 [0.00–3.36] 0.5px
74.81 [64.77–96.91] 0.5px
74.81 [64.77–96.91] 1.5px
77.28 [57.88–64.77] 0.5px
77.28 [68.53–96.91] 0.5px
79.09 [57.88–64.77] 0.5px
81.56 [57.88–64.77] 0.5px
85.10 [9.22–46.35] 0.5px
87.57 [11.77–46.35] 0.5px
100.00 [0.00–100.00] 0.5px
100.00 [64.77–96.91] 1.5px
横罫線 29本
0.00 [59.18–100.00] 0.5px
3.36 [0.00–100.00] 0.5px
9.22 [0.00–100.00] 0.5px
11.77 [0.00–100.00] 0.5px
13.80 [41.81–68.07] 0.5px
18.68 [0.00–100.00] 0.5px
20.72 [41.81–68.07] 0.5px
25.60 [0.00–100.00] 0.5px
27.64 [41.81–68.07] 0.5px
32.52 [0.00–100.00] 0.5px
34.55 [41.81–68.07] 0.5px
39.44 [0.00–100.00] 0.5px
41.47 [41.81–68.07] 0.5px
46.35 [0.00–100.00] 0.5px
53.37 [0.00–100.00] 0.5px
57.88 [0.00–100.00] 0.5px
60.39 [32.26–40.08] 0.5px
64.29 [32.26–40.08] 0.5px
64.77 [0.00–100.00] 0.5px
64.77 [74.81–100.00] 1.5px
68.53 [0.00–100.00] 0.5px
73.25 [0.00–100.00] 0.5px
77.99 [0.00–100.00] 0.5px
82.71 [0.00–100.00] 0.5px
87.45 [0.00–100.00] 0.5px
92.17 [0.00–100.00] 0.5px
96.91 [0.00–100.00] 0.5px
96.91 [74.81–100.00] 1.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第10表 の罫線が変わっていない 1`] = `
"セル 173個 / 格子 縦28本 横30本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 40本
0.00 [3.28–100.00] 0.5px
2.06 [12.47–45.71] 0.5px
2.06 [67.34–91.08] 0.5px
18.78 [9.02–45.71] 0.5px
20.93 [12.47–45.71] 0.5px
20.93 [56.95–63.68] 0.5px
22.81 [63.68–95.83] 0.5px
24.87 [67.34–95.83] 0.5px
27.01 [91.08–95.83] 0.5px
32.56 [59.48–63.24] 0.5px
34.70 [9.02–45.71] 0.5px
34.70 [59.48–63.24] 0.5px
36.85 [14.76–19.13] 0.5px
36.85 [21.42–25.76] 0.5px
36.85 [28.05–32.42] 0.5px
36.85 [34.71–39.05] 0.5px
36.85 [41.34–45.71] 0.5px
40.52 [59.48–63.24] 0.5px
44.28 [12.47–45.71] 0.5px
49.82 [12.47–45.71] 0.5px
49.82 [63.68–95.83] 0.5px
51.97 [67.34–95.83] 0.5px
55.64 [12.47–45.71] 0.5px
59.39 [0.00–3.28] 0.5px
61.27 [9.02–45.71] 0.5px
63.33 [12.47–45.71] 0.5px
70.75 [9.02–45.71] 0.5px
72.90 [0.00–3.28] 0.5px
72.90 [12.47–45.71] 0.5px
75.04 [0.00–3.28] 0.5px
75.04 [63.68–95.83] 0.5px
75.04 [63.68–95.83] 1.5px
77.19 [56.95–63.68] 0.5px
77.19 [67.34–95.83] 0.5px
78.98 [56.95–63.68] 0.5px
81.13 [56.95–63.68] 0.5px
86.67 [9.02–45.71] 0.5px
88.82 [12.47–45.71] 0.5px
100.00 [0.00–100.00] 0.5px
100.00 [63.68–95.83] 1.5px
横罫線 29本
0.00 [59.39–100.00] 0.5px
3.28 [0.00–100.00] 0.5px
9.02 [0.00–100.00] 0.5px
12.47 [0.00–100.00] 0.5px
14.76 [34.70–61.27] 0.5px
19.13 [0.00–100.00] 0.5px
21.42 [34.70–61.27] 0.5px
25.76 [0.00–100.00] 0.5px
28.05 [34.70–61.27] 0.5px
32.42 [0.00–100.00] 0.5px
34.71 [34.70–61.27] 0.5px
39.05 [0.00–100.00] 0.5px
41.34 [34.70–61.27] 0.5px
45.71 [0.00–100.00] 0.5px
52.55 [0.00–100.00] 0.5px
56.95 [0.00–100.00] 0.5px
59.48 [32.56–40.52] 0.5px
63.24 [32.56–40.52] 0.5px
63.68 [0.00–100.00] 0.5px
63.68 [75.04–100.00] 1.5px
67.34 [0.00–100.00] 0.5px
72.09 [0.00–100.00] 0.5px
76.84 [0.00–100.00] 0.5px
81.59 [0.00–100.00] 0.5px
86.33 [0.00–100.00] 0.5px
91.08 [0.00–100.00] 0.5px
95.83 [0.00–100.00] 0.5px
95.83 [75.04–100.00] 1.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11の2表 の罫線が変わっていない 1`] = `
"セル 294個 / 格子 縦34本 横29本
寄せで動いたセル 6個（最大 0.141％）
縦罫線 55本
0.00 [2.68–57.92] 0.5px
0.00 [58.45–100.00] 0.5px
2.14 [7.99–11.30] 0.5px
2.14 [69.47–93.35] 0.5px
3.98 [14.37–43.91] 0.5px
6.08 [20.04–43.91] 0.5px
6.08 [63.70–93.35] 0.5px
8.14 [63.70–93.35] 0.5px
8.14 [63.70–93.35] 1.5px
13.70 [67.50–93.35] 0.5px
17.39 [20.04–43.91] 0.5px
17.39 [67.50–93.35] 0.5px
21.11 [14.37–43.91] 0.5px
21.11 [67.50–93.35] 0.5px
23.13 [20.04–43.91] 0.5px
25.01 [63.70–93.35] 0.5px
25.01 [63.70–93.35] 1.5px
27.07 [69.47–93.35] 0.5px
34.43 [5.35–11.30] 0.5px
34.43 [20.04–43.91] 0.5px
34.43 [67.50–93.35] 0.5px
36.62 [7.99–11.30] 0.5px
36.62 [14.37–49.30] 0.5px
36.62 [69.47–93.35] 0.5px
38.63 [20.04–43.91] 0.5px
44.20 [67.50–93.35] 0.5px
46.25 [69.47–93.35] 0.5px
49.98 [14.37–49.30] 0.5px
52.08 [20.04–43.91] 0.5px
55.76 [67.50–93.35] 0.5px
57.82 [69.47–93.35] 0.5px
59.74 [0.00–2.68] 0.5px
61.54 [14.37–49.30] 0.5px
63.64 [20.04–43.91] 0.5px
63.64 [45.32–49.30] 0.5px
65.48 [7.99–11.30] 0.5px
69.16 [5.35–11.30] 0.5px
71.26 [7.99–11.30] 0.5px
71.26 [67.50–93.35] 0.5px
73.36 [0.00–2.68] 0.5px
73.36 [14.37–49.30] 0.5px
73.36 [69.47–93.35] 0.5px
75.46 [0.00–2.68] 0.5px
75.46 [20.04–43.91] 0.5px
75.46 [45.32–49.30] 0.5px
80.94 [67.50–93.35] 0.5px
83.08 [69.47–93.35] 0.5px
86.81 [14.37–49.30] 0.5px
86.81 [67.50–93.35] 0.5px
88.82 [20.04–43.91] 0.5px
88.82 [45.32–49.30] 0.5px
88.82 [69.47–93.35] 0.5px
96.23 [7.99–11.30] 0.5px
100.00 [0.00–57.92] 0.5px
100.00 [58.45–100.00] 0.5px
横罫線 30本
0.00 [59.74–100.00] 0.5px
2.68 [0.00–100.00] 0.5px
5.35 [0.00–100.00] 0.5px
7.99 [0.00–100.00] 0.5px
11.30 [0.00–100.00] 0.5px
14.37 [0.00–100.00] 0.5px
18.17 [3.98–21.11] 0.5px
20.04 [0.00–100.00] 0.5px
24.01 [0.00–100.00] 0.5px
27.99 [0.00–100.00] 0.5px
31.97 [0.00–100.00] 0.5px
35.95 [0.00–100.00] 0.5px
39.93 [0.00–100.00] 0.5px
43.91 [0.00–100.00] 0.5px
45.32 [61.54–100.00] 0.5px
49.30 [0.00–100.00] 0.5px
57.92 [0.00–100.00] 0.5px
58.45 [0.00–100.00] 0.5px
63.70 [0.00–100.00] 0.5px
63.70 [8.14–25.01] 1.5px
67.50 [8.14–100.00] 0.5px
69.47 [0.00–100.00] 0.5px
73.45 [0.00–100.00] 0.5px
77.43 [0.00–100.00] 0.5px
81.41 [0.00–100.00] 0.5px
85.39 [0.00–100.00] 0.5px
89.37 [0.00–100.00] 0.5px
93.35 [0.00–100.00] 0.5px
93.35 [8.14–25.01] 1.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11・11の2表の付表1 の罫線が変わっていない 1`] = `
"セル 189個 / 格子 縦33本 横44本
寄せで動いたセル 18個（最大 0.045％）
縦罫線 54本
0.00 [1.92–77.21] 0.5px
0.00 [77.58–100.00] 0.5px
1.88 [11.68–19.19] 0.5px
1.88 [82.50–87.04] 0.5px
3.85 [89.43–97.44] 0.5px
5.72 [14.44–19.19] 0.5px
5.72 [28.58–69.88] 0.5px
7.69 [14.44–19.19] 0.5px
7.69 [36.86–69.88] 0.5px
7.69 [89.43–97.44] 0.5px
13.42 [28.58–69.88] 0.5px
15.38 [36.86–69.88] 0.5px
17.26 [38.37–47.86] 0.5px
17.26 [49.38–58.87] 0.5px
17.26 [60.38–69.88] 0.5px
23.08 [80.85–97.44] 0.5px
24.96 [87.04–89.43] 0.5px
24.96 [91.01–93.44] 0.5px
24.96 [95.02–97.44] 0.5px
34.57 [91.01–93.44] 0.5px
36.49 [14.44–19.19] 0.5px
38.42 [14.44–19.19] 0.5px
38.42 [28.58–30.46] 0.5px
38.42 [36.86–40.73] 0.5px
38.42 [47.86–51.73] 0.5px
38.42 [58.87–62.74] 0.5px
38.42 [95.02–97.44] 0.5px
40.34 [38.37–40.73] 0.5px
40.34 [49.38–51.73] 0.5px
40.34 [60.38–62.74] 0.5px
42.31 [80.85–93.44] 0.5px
44.19 [87.04–89.43] 0.5px
44.19 [91.01–93.44] 0.5px
48.03 [95.02–97.44] 0.5px
49.96 [95.02–97.44] 0.5px
53.85 [28.58–69.88] 0.5px
55.72 [36.86–69.88] 0.5px
57.69 [36.86–69.88] 0.5px
59.57 [0.00–1.92] 0.5px
61.54 [82.50–89.43] 0.5px
63.42 [87.04–89.43] 0.5px
63.42 [95.02–97.44] 0.5px
67.26 [14.44–19.19] 0.5px
67.26 [91.01–93.44] 0.5px
69.23 [14.44–19.19] 0.5px
73.08 [95.02–97.44] 0.5px
74.96 [0.00–1.92] 0.5px
74.96 [95.02–97.44] 0.5px
76.92 [0.00–1.92] 0.5px
80.77 [82.50–93.44] 0.5px
82.65 [87.04–89.43] 0.5px
88.42 [95.02–97.44] 0.5px
100.00 [0.00–77.21] 0.5px
100.00 [77.58–100.00] 0.5px
横罫線 43本
0.00 [59.57–100.00] 0.5px
1.92 [0.00–100.00] 0.5px
8.41 [0.00–100.00] 0.5px
11.68 [0.00–100.00] 0.5px
14.44 [1.88–100.00] 0.5px
16.80 [5.72–100.00] 0.5px
19.19 [0.00–100.00] 0.5px
21.07 [0.00–100.00] 0.5px
28.58 [0.00–100.00] 0.5px
30.46 [13.42–100.00] 0.5px
33.05 [13.42–100.00] 0.5px
35.04 [13.42–100.00] 0.5px
36.86 [5.72–100.00] 0.5px
38.37 [15.38–53.85] 0.5px
40.73 [13.42–100.00] 0.5px
43.12 [13.42–100.00] 0.5px
45.47 [13.42–100.00] 0.5px
47.86 [5.72–100.00] 0.5px
49.38 [15.38–53.85] 0.5px
51.73 [13.42–100.00] 0.5px
54.12 [13.42–100.00] 0.5px
56.48 [13.42–100.00] 0.5px
58.87 [5.72–100.00] 0.5px
60.38 [15.38–53.85] 0.5px
62.74 [13.42–100.00] 0.5px
65.13 [13.42–100.00] 0.5px
67.49 [13.42–100.00] 0.5px
69.88 [0.00–100.00] 0.5px
77.21 [0.00–100.00] 0.5px
77.58 [0.00–100.00] 0.5px
80.85 [0.00–100.00] 0.5px
82.50 [0.00–100.00] 0.5px
84.11 [1.88–100.00] 0.5px
87.04 [0.00–100.00] 0.5px
89.43 [0.00–100.00] 0.5px
91.01 [23.08–34.57] 0.5px
91.01 [42.31–67.26] 0.5px
93.44 [3.85–100.00] 0.5px
95.02 [23.08–38.42] 0.5px
95.02 [48.03–63.42] 0.5px
95.02 [73.08–88.42] 0.5px
97.44 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11・11の2表の付表1（別表1） の罫線が変わっていない 1`] = `
"セル 293個 / 格子 縦24本 横56本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 83本
0.00 [1.88–8.09] 0.5px
0.00 [8.45–28.26] 0.5px
0.00 [28.62–69.86] 0.5px
0.00 [70.12–100.00] 0.5px
1.78 [16.47–28.26] 0.5px
1.78 [43.71–69.86] 0.5px
1.78 [73.82–100.00] 0.5px
4.27 [48.76–51.07] 0.5px
4.27 [52.39–55.46] 0.5px
4.27 [56.75–59.10] 0.5px
4.27 [60.38–62.73] 0.5px
4.27 [64.01–66.36] 0.5px
4.27 [67.65–69.86] 0.5px
4.27 [78.84–81.18] 0.5px
4.27 [82.47–85.44] 0.5px
4.27 [86.76–89.07] 0.5px
4.27 [90.39–92.70] 0.5px
4.27 [94.02–96.34] 0.5px
4.27 [97.66–100.00] 0.5px
14.97 [13.04–14.89] 0.5px
14.97 [39.88–43.71] 0.5px
14.97 [45.59–69.86] 0.5px
14.97 [70.12–73.82] 0.5px
14.97 [75.67–100.00] 0.5px
17.54 [13.04–14.89] 0.5px
17.54 [39.88–43.71] 0.5px
17.54 [48.76–51.07] 0.5px
17.54 [52.39–55.46] 0.5px
17.54 [56.75–59.10] 0.5px
17.54 [60.38–62.73] 0.5px
17.54 [64.01–66.36] 0.5px
17.54 [67.65–69.86] 0.5px
17.54 [70.12–73.82] 0.5px
17.54 [78.84–81.18] 0.5px
17.54 [82.47–85.44] 0.5px
17.54 [86.76–89.07] 0.5px
17.54 [90.39–92.70] 0.5px
17.54 [94.02–96.34] 0.5px
17.54 [97.66–100.00] 0.5px
33.54 [43.71–69.86] 0.5px
33.54 [73.82–100.00] 0.5px
36.03 [47.44–59.10] 0.5px
36.03 [62.73–66.36] 0.5px
36.03 [77.55–89.07] 0.5px
36.03 [92.70–96.34] 0.5px
43.16 [39.88–43.71] 0.5px
43.16 [70.12–73.82] 0.5px
46.72 [45.59–69.86] 0.5px
46.72 [75.67–100.00] 0.5px
49.30 [14.89–28.26] 0.5px
49.30 [47.44–59.10] 0.5px
49.30 [62.73–66.36] 0.5px
49.30 [77.55–89.07] 0.5px
49.30 [92.70–96.34] 0.5px
51.04 [16.47–28.26] 0.5px
53.52 [16.47–28.26] 0.5px
55.35 [39.88–43.71] 0.5px
55.35 [70.12–73.82] 0.5px
57.84 [39.88–41.37] 0.5px
57.84 [42.23–43.71] 0.5px
57.84 [70.12–71.48] 0.5px
57.84 [72.33–73.82] 0.5px
59.66 [0.00–1.88] 0.5px
66.79 [13.04–14.89] 0.5px
66.79 [39.88–69.86] 0.5px
66.79 [70.12–100.00] 0.5px
69.28 [14.89–28.26] 0.5px
69.28 [47.44–69.86] 0.5px
69.28 [77.55–100.00] 0.5px
71.02 [16.47–28.26] 0.5px
73.59 [16.47–28.26] 0.5px
75.33 [0.00–1.88] 0.5px
77.82 [0.00–1.88] 0.5px
81.38 [13.04–14.89] 0.5px
81.38 [45.59–69.86] 0.5px
81.38 [75.67–100.00] 0.5px
83.96 [13.04–14.89] 0.5px
83.96 [47.44–69.86] 0.5px
83.96 [77.55–100.00] 0.5px
100.00 [0.00–8.09] 0.5px
100.00 [8.45–28.26] 0.5px
100.00 [28.62–69.86] 0.5px
100.00 [70.12–100.00] 0.5px
横罫線 54本
0.00 [59.66–100.00] 0.5px
1.88 [0.00–100.00] 0.5px
8.09 [0.00–100.00] 0.5px
8.45 [0.00–100.00] 0.5px
13.04 [0.00–100.00] 0.5px
14.89 [0.00–100.00] 0.5px
16.47 [0.00–100.00] 0.5px
18.72 [0.00–100.00] 0.5px
20.40 [0.00–100.00] 0.5px
22.65 [0.00–100.00] 0.5px
24.89 [0.00–100.00] 0.5px
26.58 [0.00–100.00] 0.5px
28.26 [0.00–100.00] 0.5px
28.62 [0.00–100.00] 0.5px
39.88 [0.00–100.00] 0.5px
41.37 [55.35–66.79] 0.5px
41.76 [57.84–66.79] 0.5px
42.23 [55.35–66.79] 0.5px
43.71 [0.00–100.00] 0.5px
45.59 [1.78–100.00] 0.5px
47.44 [0.00–100.00] 0.5px
48.76 [1.78–33.54] 0.5px
51.07 [0.00–100.00] 0.5px
52.39 [1.78–33.54] 0.5px
53.12 [33.54–66.79] 0.5px
55.46 [0.00–100.00] 0.5px
56.75 [1.78–33.54] 0.5px
59.10 [0.00–100.00] 0.5px
60.38 [1.78–33.54] 0.5px
62.73 [0.00–100.00] 0.5px
64.01 [1.78–33.54] 0.5px
66.36 [0.00–100.00] 0.5px
67.65 [1.78–33.54] 0.5px
69.86 [0.00–100.00] 0.5px
70.12 [0.00–100.00] 0.5px
71.48 [55.35–66.79] 0.5px
71.87 [57.84–66.79] 0.5px
72.33 [55.35–66.79] 0.5px
73.82 [0.00–100.00] 0.5px
75.67 [1.78–100.00] 0.5px
77.55 [0.00–100.00] 0.5px
78.84 [1.78–33.54] 0.5px
81.18 [0.00–100.00] 0.5px
82.47 [1.78–33.54] 0.5px
83.13 [33.54–66.79] 0.5px
85.44 [0.00–100.00] 0.5px
86.76 [1.78–33.54] 0.5px
89.07 [0.00–100.00] 0.5px
90.39 [1.78–33.54] 0.5px
92.70 [0.00–100.00] 0.5px
94.02 [1.78–33.54] 0.5px
96.34 [0.00–100.00] 0.5px
97.66 [1.78–33.54] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11・11の2表の付表1（続） の罫線が変わっていない 1`] = `
"セル 190個 / 格子 縦19本 横41本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 35本
0.00 [1.88–100.00] 0.5px
1.88 [5.67–13.56] 0.5px
5.72 [8.83–13.56] 0.5px
5.72 [22.69–89.22] 0.5px
7.69 [8.83–13.56] 0.5px
7.69 [34.34–89.22] 0.5px
13.42 [22.69–89.22] 0.5px
15.38 [34.34–89.22] 0.5px
17.26 [35.85–45.32] 0.5px
17.26 [46.83–56.29] 0.5px
17.26 [57.80–67.27] 0.5px
17.26 [68.78–78.25] 0.5px
17.26 [79.76–89.22] 0.5px
36.49 [8.83–13.56] 0.5px
38.46 [8.83–13.56] 0.5px
38.46 [22.69–25.21] 0.5px
38.46 [34.34–38.23] 0.5px
38.46 [45.32–49.21] 0.5px
38.46 [56.29–60.19] 0.5px
38.46 [67.27–71.16] 0.5px
38.46 [78.25–82.14] 0.5px
40.34 [35.85–38.23] 0.5px
40.34 [46.83–49.21] 0.5px
40.34 [57.80–60.19] 0.5px
40.34 [68.78–71.16] 0.5px
40.34 [79.76–82.14] 0.5px
53.85 [22.69–89.22] 0.5px
55.72 [34.34–89.22] 0.5px
57.69 [34.34–89.22] 0.5px
59.57 [0.00–1.88] 0.5px
67.26 [8.83–13.56] 0.5px
69.23 [8.83–13.56] 0.5px
74.96 [0.00–1.88] 0.5px
76.92 [0.00–1.88] 0.5px
100.00 [0.00–100.00] 0.5px
横罫線 38本
0.00 [59.57–100.00] 0.5px
1.88 [0.00–100.00] 0.5px
5.67 [0.00–100.00] 0.5px
8.83 [1.88–100.00] 0.5px
11.18 [5.72–100.00] 0.5px
13.56 [0.00–100.00] 0.5px
15.44 [0.00–100.00] 0.5px
22.69 [0.00–100.00] 0.5px
25.21 [13.42–100.00] 0.5px
29.27 [13.42–100.00] 0.5px
31.82 [13.42–100.00] 0.5px
34.34 [5.72–100.00] 0.5px
35.85 [15.38–53.85] 0.5px
38.23 [13.42–100.00] 0.5px
40.58 [13.42–100.00] 0.5px
42.97 [13.42–100.00] 0.5px
45.32 [5.72–100.00] 0.5px
46.83 [15.38–53.85] 0.5px
49.21 [13.42–100.00] 0.5px
51.56 [13.42–100.00] 0.5px
53.94 [13.42–100.00] 0.5px
56.29 [5.72–100.00] 0.5px
57.80 [15.38–53.85] 0.5px
60.19 [13.42–100.00] 0.5px
62.54 [13.42–100.00] 0.5px
64.92 [13.42–100.00] 0.5px
67.27 [5.72–100.00] 0.5px
68.78 [15.38–53.85] 0.5px
71.16 [13.42–100.00] 0.5px
73.51 [13.42–100.00] 0.5px
75.90 [13.42–100.00] 0.5px
78.25 [5.72–100.00] 0.5px
79.76 [15.38–53.85] 0.5px
82.14 [13.42–100.00] 0.5px
84.49 [13.42–100.00] 0.5px
86.87 [13.42–100.00] 0.5px
89.22 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11表 の罫線が変わっていない 1`] = `
"セル 171個 / 格子 縦22本 横32本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 37本
0.00 [4.37–12.19] 0.5px
0.00 [13.14–50.44] 0.5px
0.00 [50.89–100.00] 0.5px
4.47 [29.89–47.47] 0.5px
4.47 [56.97–92.12] 0.5px
12.86 [20.99–25.27] 0.5px
12.86 [27.11–47.47] 0.5px
12.86 [53.45–92.12] 0.5px
14.82 [20.99–25.27] 0.5px
14.82 [29.89–47.47] 0.5px
14.82 [56.97–92.12] 0.5px
27.68 [17.83–25.27] 0.5px
43.80 [53.45–92.12] 0.5px
45.76 [17.83–25.27] 0.5px
45.76 [56.97–92.12] 0.5px
47.72 [20.99–25.27] 0.5px
52.75 [0.00–3.83] 0.5px
54.61 [27.11–47.47] 0.5px
56.57 [19.41–25.27] 0.5px
56.57 [29.89–47.47] 0.5px
62.07 [0.00–3.83] 0.5px
62.07 [19.41–25.27] 0.5px
63.93 [0.00–3.83] 0.5px
63.93 [27.11–47.47] 0.5px
65.89 [29.89–47.47] 0.5px
67.66 [19.41–25.27] 0.5px
73.25 [17.83–25.27] 0.5px
73.25 [53.45–92.12] 0.5px
75.21 [20.99–25.27] 0.5px
75.21 [56.97–92.12] 0.5px
82.57 [19.41–25.27] 0.5px
86.21 [0.00–3.83] 0.5px
88.07 [19.41–25.27] 0.5px
93.57 [19.41–25.27] 0.5px
100.00 [4.37–12.19] 0.5px
100.00 [13.14–50.44] 0.5px
100.00 [50.89–100.00] 0.5px
横罫線 32本
0.00 [52.75–86.21] 0.5px
3.83 [52.75–86.21] 0.5px
4.37 [0.00–100.00] 0.5px
12.19 [0.00–100.00] 0.5px
13.14 [0.00–100.00] 0.5px
17.83 [0.00–100.00] 0.5px
19.41 [45.76–100.00] 0.5px
20.99 [0.00–27.68] 0.5px
20.99 [45.76–100.00] 0.5px
25.27 [0.00–100.00] 0.5px
27.11 [0.00–100.00] 0.5px
29.89 [0.00–100.00] 0.5px
33.41 [0.00–100.00] 0.5px
36.92 [0.00–100.00] 0.5px
40.44 [0.00–100.00] 0.5px
43.95 [0.00–100.00] 0.5px
47.47 [0.00–100.00] 0.5px
50.44 [0.00–100.00] 0.5px
50.89 [0.00–100.00] 0.5px
53.45 [0.00–100.00] 0.5px
56.97 [0.00–100.00] 0.5px
60.48 [0.00–100.00] 0.5px
64.00 [0.00–100.00] 0.5px
67.51 [0.00–100.00] 0.5px
71.03 [0.00–100.00] 0.5px
74.54 [0.00–100.00] 0.5px
78.06 [0.00–100.00] 0.5px
81.57 [0.00–100.00] 0.5px
85.09 [0.00–100.00] 0.5px
88.60 [0.00–100.00] 0.5px
92.12 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11表の付表1 の罫線が変わっていない 1`] = `
"セル 405個 / 格子 縦28本 横33本
寄せで動いたセル 48個（最大 0.096％）
縦罫線 118本
0.00 [3.51–14.01] 0.5px
0.00 [14.24–100.00] 0.5px
2.56 [14.24–100.00] 0.5px
5.54 [8.38–14.01] 0.5px
5.54 [14.24–100.00] 0.5px
8.05 [14.24–100.00] 0.5px
11.43 [8.38–10.30] 0.5px
11.43 [12.22–14.01] 0.5px
11.43 [14.24–17.72] 0.5px
11.43 [21.29–28.44] 0.5px
11.43 [32.02–39.17] 0.5px
11.43 [42.75–49.90] 0.5px
11.43 [53.48–60.63] 0.5px
11.43 [64.21–71.36] 0.5px
11.43 [74.93–82.09] 0.5px
11.43 [85.66–92.85] 0.5px
11.43 [96.42–100.00] 0.5px
13.93 [14.24–17.72] 0.5px
13.93 [21.29–28.44] 0.5px
13.93 [32.02–39.17] 0.5px
13.93 [42.75–49.90] 0.5px
13.93 [53.48–60.63] 0.5px
13.93 [64.21–71.36] 0.5px
13.93 [74.93–82.09] 0.5px
13.93 [85.66–92.85] 0.5px
13.93 [96.42–100.00] 0.5px
16.88 [10.30–12.22] 0.5px
16.88 [17.72–21.29] 0.5px
16.88 [28.44–32.02] 0.5px
16.88 [39.17–42.75] 0.5px
16.88 [49.90–53.48] 0.5px
16.88 [60.63–64.21] 0.5px
16.88 [71.36–74.93] 0.5px
16.88 [82.09–85.66] 0.5px
16.88 [92.85–96.42] 0.5px
19.38 [17.72–21.29] 0.5px
19.38 [28.44–32.02] 0.5px
19.38 [39.17–42.75] 0.5px
19.38 [49.90–53.48] 0.5px
19.38 [60.63–64.21] 0.5px
19.38 [71.36–74.93] 0.5px
19.38 [82.09–85.66] 0.5px
19.38 [92.85–96.42] 0.5px
22.32 [8.38–14.01] 0.5px
22.32 [14.24–100.00] 0.5px
24.83 [14.24–100.00] 0.5px
33.70 [14.24–17.72] 0.5px
33.70 [24.87–28.44] 0.5px
33.70 [35.60–39.17] 0.5px
33.70 [46.32–49.90] 0.5px
33.70 [57.05–60.63] 0.5px
33.70 [67.78–71.36] 0.5px
33.70 [78.51–82.09] 0.5px
33.70 [89.24–92.85] 0.5px
36.21 [14.24–17.72] 0.5px
36.21 [24.87–28.44] 0.5px
36.21 [35.60–39.17] 0.5px
36.21 [46.32–49.90] 0.5px
36.21 [57.05–60.63] 0.5px
36.21 [67.78–71.36] 0.5px
36.21 [78.51–82.09] 0.5px
36.21 [89.24–92.85] 0.5px
45.90 [0.00–2.98] 0.5px
48.26 [8.38–14.01] 0.5px
48.26 [14.24–100.00] 0.5px
50.77 [14.24–100.00] 0.5px
55.64 [0.00–2.98] 0.5px
58.15 [0.00–2.98] 0.5px
60.61 [8.38–12.22] 0.5px
60.61 [14.24–21.29] 0.5px
60.61 [24.87–32.02] 0.5px
60.61 [35.60–42.75] 0.5px
60.61 [46.32–53.48] 0.5px
60.61 [57.05–64.21] 0.5px
60.61 [67.78–74.93] 0.5px
60.61 [78.51–85.66] 0.5px
60.61 [89.24–96.42] 0.5px
63.11 [14.24–21.29] 0.5px
63.11 [24.87–32.02] 0.5px
63.11 [35.60–42.75] 0.5px
63.11 [46.32–53.48] 0.5px
63.11 [57.05–64.21] 0.5px
63.11 [67.78–74.93] 0.5px
63.11 [78.51–85.66] 0.5px
63.11 [89.24–96.42] 0.5px
66.10 [17.72–21.29] 0.5px
66.10 [28.44–32.02] 0.5px
66.10 [39.17–42.75] 0.5px
66.10 [49.90–53.48] 0.5px
66.10 [60.63–64.21] 0.5px
66.10 [71.36–74.93] 0.5px
66.10 [82.09–85.66] 0.5px
66.10 [92.85–96.42] 0.5px
68.03 [17.72–21.29] 0.5px
68.03 [28.44–32.02] 0.5px
68.03 [39.17–42.75] 0.5px
68.03 [49.90–53.48] 0.5px
68.03 [60.63–64.21] 0.5px
68.03 [71.36–74.93] 0.5px
68.03 [82.09–85.66] 0.5px
68.03 [92.85–96.42] 0.5px
70.54 [17.72–21.29] 0.5px
70.54 [28.44–32.02] 0.5px
70.54 [39.17–42.75] 0.5px
70.54 [49.90–53.48] 0.5px
70.54 [60.63–64.21] 0.5px
70.54 [71.36–74.93] 0.5px
70.54 [82.09–85.66] 0.5px
70.54 [92.85–96.42] 0.5px
73.34 [5.96–100.00] 0.5px
73.72 [5.96–100.00] 0.5px
76.04 [14.24–100.00] 0.5px
81.92 [8.38–14.01] 0.5px
81.92 [14.24–100.00] 0.5px
84.33 [0.00–2.98] 0.5px
84.33 [14.24–100.00] 0.5px
100.00 [3.51–14.01] 0.5px
100.00 [14.24–100.00] 0.5px
横罫線 61本
0.00 [45.90–84.33] 0.5px
2.98 [45.90–84.33] 0.5px
3.51 [0.00–100.00] 0.5px
5.96 [0.00–100.00] 0.5px
8.38 [0.00–73.34] 0.5px
8.38 [73.72–100.00] 0.5px
10.30 [5.54–22.32] 0.5px
10.30 [48.26–73.34] 0.5px
12.22 [5.54–22.32] 0.5px
12.22 [48.26–73.34] 0.5px
14.01 [0.00–73.34] 0.5px
14.01 [73.72–100.00] 0.5px
14.24 [0.00–73.34] 0.5px
14.24 [73.72–100.00] 0.5px
17.72 [5.54–73.34] 0.5px
17.72 [73.72–100.00] 0.5px
21.29 [5.54–73.34] 0.5px
21.29 [73.72–100.00] 0.5px
24.87 [0.00–73.34] 0.5px
24.87 [73.72–100.00] 0.5px
28.44 [5.54–73.34] 0.5px
28.44 [73.72–100.00] 0.5px
32.02 [5.54–73.34] 0.5px
32.02 [73.72–100.00] 0.5px
35.60 [0.00–73.34] 0.5px
35.60 [73.72–100.00] 0.5px
39.17 [5.54–73.34] 0.5px
39.17 [73.72–100.00] 0.5px
42.75 [5.54–73.34] 0.5px
42.75 [73.72–100.00] 0.5px
46.32 [0.00–73.34] 0.5px
46.32 [73.72–100.00] 0.5px
49.90 [5.54–73.34] 0.5px
49.90 [73.72–100.00] 0.5px
53.48 [5.54–73.34] 0.5px
53.48 [73.72–100.00] 0.5px
57.05 [0.00–73.34] 0.5px
57.05 [73.72–100.00] 0.5px
60.63 [5.54–73.34] 0.5px
60.63 [73.72–100.00] 0.5px
64.21 [5.54–73.34] 0.5px
64.21 [73.72–100.00] 0.5px
67.78 [0.00–73.34] 0.5px
67.78 [73.72–100.00] 0.5px
71.36 [5.54–73.34] 0.5px
71.36 [73.72–100.00] 0.5px
74.93 [5.54–73.34] 0.5px
74.93 [73.72–100.00] 0.5px
78.51 [0.00–73.34] 0.5px
78.51 [73.72–100.00] 0.5px
82.09 [5.54–73.34] 0.5px
82.09 [73.72–100.00] 0.5px
85.66 [5.54–73.34] 0.5px
85.66 [73.72–100.00] 0.5px
89.24 [0.00–73.34] 0.5px
89.24 [73.72–100.00] 0.5px
92.85 [5.54–73.34] 0.5px
92.85 [73.72–100.00] 0.5px
96.42 [5.54–73.34] 0.5px
96.42 [73.72–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11表の付表2 の罫線が変わっていない 1`] = `
"セル 380個 / 格子 縦25本 横33本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 94本
0.00 [3.52–14.68] 0.5px
0.00 [14.93–100.00] 0.5px
1.99 [14.93–100.00] 0.5px
5.88 [8.72–14.68] 0.5px
5.88 [14.93–100.00] 0.5px
7.87 [14.93–100.00] 0.5px
11.86 [8.72–10.80] 0.5px
11.86 [12.91–14.68] 0.5px
11.86 [14.93–18.35] 0.5px
11.86 [21.90–29.00] 0.5px
11.86 [32.55–39.65] 0.5px
11.86 [43.19–50.29] 0.5px
11.86 [53.84–60.94] 0.5px
11.86 [64.48–71.58] 0.5px
11.86 [75.13–82.23] 0.5px
11.86 [85.78–92.90] 0.5px
11.86 [96.45–100.00] 0.5px
13.76 [14.93–18.35] 0.5px
13.76 [21.90–29.00] 0.5px
13.76 [32.55–39.65] 0.5px
13.76 [43.19–50.29] 0.5px
13.76 [53.84–60.94] 0.5px
13.76 [64.48–71.58] 0.5px
13.76 [75.13–82.23] 0.5px
13.76 [85.78–92.90] 0.5px
13.76 [96.45–100.00] 0.5px
17.74 [10.80–12.91] 0.5px
17.74 [18.35–21.90] 0.5px
17.74 [29.00–32.55] 0.5px
17.74 [39.65–43.19] 0.5px
17.74 [50.29–53.84] 0.5px
17.74 [60.94–64.48] 0.5px
17.74 [71.58–75.13] 0.5px
17.74 [82.23–85.78] 0.5px
17.74 [92.90–96.45] 0.5px
19.73 [18.35–21.90] 0.5px
19.73 [29.00–32.55] 0.5px
19.73 [39.65–43.19] 0.5px
19.73 [50.29–53.84] 0.5px
19.73 [60.94–64.48] 0.5px
19.73 [71.58–75.13] 0.5px
19.73 [82.23–85.78] 0.5px
19.73 [92.90–96.45] 0.5px
23.62 [8.72–14.68] 0.5px
23.62 [14.93–100.00] 0.5px
25.61 [14.93–100.00] 0.5px
29.50 [14.93–21.90] 0.5px
29.50 [25.45–32.55] 0.5px
29.50 [36.10–43.19] 0.5px
29.50 [46.74–53.84] 0.5px
29.50 [57.39–64.48] 0.5px
29.50 [68.03–75.13] 0.5px
29.50 [78.68–85.78] 0.5px
29.50 [89.32–96.45] 0.5px
31.49 [14.93–21.90] 0.5px
31.49 [25.45–32.55] 0.5px
31.49 [36.10–43.19] 0.5px
31.49 [46.74–53.84] 0.5px
31.49 [57.39–64.48] 0.5px
31.49 [68.03–75.13] 0.5px
31.49 [78.68–85.78] 0.5px
31.49 [89.32–96.45] 0.5px
47.24 [0.00–2.97] 0.5px
49.23 [8.72–14.68] 0.5px
49.23 [14.93–100.00] 0.5px
51.22 [14.93–100.00] 0.5px
58.10 [0.00–2.97] 0.5px
60.09 [0.00–2.97] 0.5px
62.08 [8.72–10.80] 0.5px
62.08 [14.93–18.35] 0.5px
62.08 [25.45–29.00] 0.5px
62.08 [36.10–39.65] 0.5px
62.08 [46.74–50.29] 0.5px
62.08 [57.39–60.94] 0.5px
62.08 [68.03–71.58] 0.5px
62.08 [78.68–82.23] 0.5px
62.08 [89.32–92.90] 0.5px
64.07 [14.93–18.35] 0.5px
64.07 [25.45–29.00] 0.5px
64.07 [36.10–39.65] 0.5px
64.07 [46.74–50.29] 0.5px
64.07 [57.39–60.94] 0.5px
64.07 [68.03–71.58] 0.5px
64.07 [78.68–82.23] 0.5px
64.07 [89.32–92.90] 0.5px
73.67 [6.33–100.00] 0.5px
74.03 [6.33–100.00] 0.5px
76.29 [14.93–100.00] 0.5px
82.26 [8.72–14.68] 0.5px
82.26 [14.93–100.00] 0.5px
84.16 [0.00–2.97] 0.5px
84.16 [14.93–100.00] 0.5px
100.00 [3.52–14.68] 0.5px
100.00 [14.93–100.00] 0.5px
横罫線 61本
0.00 [47.24–84.16] 0.5px
2.97 [47.24–84.16] 0.5px
3.52 [0.00–100.00] 0.5px
6.33 [0.00–100.00] 0.5px
8.72 [0.00–73.67] 0.5px
8.72 [74.03–100.00] 0.5px
10.80 [5.88–23.62] 0.5px
10.80 [49.23–73.67] 0.5px
12.91 [5.88–23.62] 0.5px
12.91 [49.23–73.67] 0.5px
14.68 [0.00–73.67] 0.5px
14.68 [74.03–100.00] 0.5px
14.93 [0.00–73.67] 0.5px
14.93 [74.03–100.00] 0.5px
18.35 [5.88–73.67] 0.5px
18.35 [74.03–100.00] 0.5px
21.90 [5.88–73.67] 0.5px
21.90 [74.03–100.00] 0.5px
25.45 [0.00–73.67] 0.5px
25.45 [74.03–100.00] 0.5px
29.00 [5.88–73.67] 0.5px
29.00 [74.03–100.00] 0.5px
32.55 [5.88–73.67] 0.5px
32.55 [74.03–100.00] 0.5px
36.10 [0.00–73.67] 0.5px
36.10 [74.03–100.00] 0.5px
39.65 [5.88–73.67] 0.5px
39.65 [74.03–100.00] 0.5px
43.19 [5.88–73.67] 0.5px
43.19 [74.03–100.00] 0.5px
46.74 [0.00–73.67] 0.5px
46.74 [74.03–100.00] 0.5px
50.29 [5.88–73.67] 0.5px
50.29 [74.03–100.00] 0.5px
53.84 [5.88–73.67] 0.5px
53.84 [74.03–100.00] 0.5px
57.39 [0.00–73.67] 0.5px
57.39 [74.03–100.00] 0.5px
60.94 [5.88–73.67] 0.5px
60.94 [74.03–100.00] 0.5px
64.48 [5.88–73.67] 0.5px
64.48 [74.03–100.00] 0.5px
68.03 [0.00–73.67] 0.5px
68.03 [74.03–100.00] 0.5px
71.58 [5.88–73.67] 0.5px
71.58 [74.03–100.00] 0.5px
75.13 [5.88–73.67] 0.5px
75.13 [74.03–100.00] 0.5px
78.68 [0.00–73.67] 0.5px
78.68 [74.03–100.00] 0.5px
82.23 [5.88–73.67] 0.5px
82.23 [74.03–100.00] 0.5px
85.78 [5.88–73.67] 0.5px
85.78 [74.03–100.00] 0.5px
89.32 [0.00–73.67] 0.5px
89.32 [74.03–100.00] 0.5px
92.90 [5.88–73.67] 0.5px
92.90 [74.03–100.00] 0.5px
96.45 [5.88–73.67] 0.5px
96.45 [74.03–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11表の付表3 の罫線が変わっていない 1`] = `
"セル 346個 / 格子 縦25本 横42本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 91本
0.00 [3.53–14.42] 0.5px
0.00 [14.67–100.00] 0.5px
2.28 [14.67–100.00] 0.5px
6.15 [8.40–14.42] 0.5px
6.15 [14.67–100.00] 0.5px
8.52 [14.67–100.00] 0.5px
12.38 [8.40–10.71] 0.5px
12.38 [14.67–18.11] 0.5px
12.38 [25.23–28.79] 0.5px
12.38 [35.91–39.47] 0.5px
12.38 [46.59–50.15] 0.5px
12.38 [57.27–60.83] 0.5px
12.38 [67.95–71.52] 0.5px
12.38 [78.64–82.20] 0.5px
12.38 [89.32–92.88] 0.5px
14.67 [14.67–18.11] 0.5px
14.67 [25.23–28.79] 0.5px
14.67 [35.91–39.47] 0.5px
14.67 [46.59–50.15] 0.5px
14.67 [57.27–60.83] 0.5px
14.67 [67.95–71.52] 0.5px
14.67 [78.64–82.20] 0.5px
14.67 [89.32–92.88] 0.5px
18.53 [10.71–12.63] 0.5px
18.53 [18.11–21.67] 0.5px
18.53 [28.79–32.35] 0.5px
18.53 [39.47–43.03] 0.5px
18.53 [50.15–53.71] 0.5px
18.53 [60.83–64.39] 0.5px
18.53 [71.52–75.08] 0.5px
18.53 [82.20–85.76] 0.5px
18.53 [92.88–96.44] 0.5px
20.82 [18.11–21.67] 0.5px
20.82 [28.79–32.35] 0.5px
20.82 [39.47–43.03] 0.5px
20.82 [50.15–53.71] 0.5px
20.82 [60.83–64.39] 0.5px
20.82 [71.52–75.08] 0.5px
20.82 [82.20–85.76] 0.5px
20.82 [92.88–96.44] 0.5px
24.68 [8.40–14.42] 0.5px
24.68 [14.67–100.00] 0.5px
26.61 [14.67–100.00] 0.5px
30.48 [14.67–21.67] 0.5px
30.48 [25.23–32.35] 0.5px
30.48 [35.91–43.03] 0.5px
30.48 [46.59–53.71] 0.5px
30.48 [57.27–64.39] 0.5px
30.48 [67.95–75.08] 0.5px
30.48 [78.64–85.76] 0.5px
30.48 [89.32–96.44] 0.5px
32.76 [14.67–21.67] 0.5px
32.76 [25.23–32.35] 0.5px
32.76 [35.91–43.03] 0.5px
32.76 [46.59–53.71] 0.5px
32.76 [57.27–64.39] 0.5px
32.76 [67.95–75.08] 0.5px
32.76 [78.64–85.76] 0.5px
32.76 [89.32–96.44] 0.5px
48.22 [0.00–2.98] 0.5px
50.15 [8.40–14.42] 0.5px
50.15 [14.67–100.00] 0.5px
52.53 [14.67–100.00] 0.5px
58.32 [0.00–2.98] 0.5px
60.25 [0.00–2.98] 0.5px
62.19 [8.40–11.66] 0.5px
62.19 [14.67–19.87] 0.5px
62.19 [25.23–30.55] 0.5px
62.19 [35.91–41.24] 0.5px
62.19 [46.59–51.92] 0.5px
62.19 [57.27–62.60] 0.5px
62.19 [67.95–73.28] 0.5px
62.19 [78.64–83.96] 0.5px
62.19 [89.32–94.64] 0.5px
64.47 [14.67–19.87] 0.5px
64.47 [25.23–30.55] 0.5px
64.47 [35.91–41.24] 0.5px
64.47 [46.59–51.92] 0.5px
64.47 [57.27–62.60] 0.5px
64.47 [67.95–73.28] 0.5px
64.47 [78.64–83.96] 0.5px
64.47 [89.32–94.64] 0.5px
73.96 [6.00–100.00] 0.5px
74.31 [6.00–100.00] 0.5px
76.42 [14.67–100.00] 0.5px
82.21 [8.40–14.42] 0.5px
82.21 [14.67–100.00] 0.5px
84.50 [0.00–2.98] 0.5px
84.50 [14.67–100.00] 0.5px
100.00 [3.53–14.42] 0.5px
100.00 [14.67–100.00] 0.5px
横罫線 68本
0.00 [48.22–84.50] 0.5px
2.98 [48.22–84.50] 0.5px
3.53 [0.00–100.00] 0.5px
6.00 [0.00–100.00] 0.5px
8.40 [0.00–73.96] 0.5px
8.40 [74.31–100.00] 0.5px
10.71 [6.15–24.68] 0.5px
11.66 [50.15–73.96] 0.5px
12.63 [6.15–24.68] 0.5px
14.42 [0.00–73.96] 0.5px
14.42 [74.31–100.00] 0.5px
14.67 [0.00–73.96] 0.5px
14.67 [74.31–100.00] 0.5px
18.11 [6.15–50.15] 0.5px
18.11 [74.31–100.00] 0.5px
19.87 [50.15–73.96] 0.5px
21.67 [6.15–50.15] 0.5px
21.67 [74.31–100.00] 0.5px
25.23 [0.00–73.96] 0.5px
25.23 [74.31–100.00] 0.5px
28.79 [6.15–50.15] 0.5px
28.79 [74.31–100.00] 0.5px
30.55 [50.15–73.96] 0.5px
32.35 [6.15–50.15] 0.5px
32.35 [74.31–100.00] 0.5px
35.91 [0.00–73.96] 0.5px
35.91 [74.31–100.00] 0.5px
39.47 [6.15–50.15] 0.5px
39.47 [74.31–100.00] 0.5px
41.24 [50.15–73.96] 0.5px
43.03 [6.15–50.15] 0.5px
43.03 [74.31–100.00] 0.5px
46.59 [0.00–73.96] 0.5px
46.59 [74.31–100.00] 0.5px
50.15 [6.15–50.15] 0.5px
50.15 [74.31–100.00] 0.5px
51.92 [50.15–73.96] 0.5px
53.71 [6.15–50.15] 0.5px
53.71 [74.31–100.00] 0.5px
57.27 [0.00–73.96] 0.5px
57.27 [74.31–100.00] 0.5px
60.83 [6.15–50.15] 0.5px
60.83 [74.31–100.00] 0.5px
62.60 [50.15–73.96] 0.5px
64.39 [6.15–50.15] 0.5px
64.39 [74.31–100.00] 0.5px
67.95 [0.00–73.96] 0.5px
67.95 [74.31–100.00] 0.5px
71.52 [6.15–50.15] 0.5px
71.52 [74.31–100.00] 0.5px
73.28 [50.15–73.96] 0.5px
75.08 [6.15–50.15] 0.5px
75.08 [74.31–100.00] 0.5px
78.64 [0.00–73.96] 0.5px
78.64 [74.31–100.00] 0.5px
82.20 [6.15–50.15] 0.5px
82.20 [74.31–100.00] 0.5px
83.96 [50.15–73.96] 0.5px
85.76 [6.15–50.15] 0.5px
85.76 [74.31–100.00] 0.5px
89.32 [0.00–73.96] 0.5px
89.32 [74.31–100.00] 0.5px
92.88 [6.15–50.15] 0.5px
92.88 [74.31–100.00] 0.5px
94.64 [50.15–73.96] 0.5px
96.44 [6.15–50.15] 0.5px
96.44 [74.31–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第11表の付表4 の罫線が変わっていない 1`] = `
"セル 314個 / 格子 縦23本 横42本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 75本
0.00 [3.27–13.92] 0.5px
0.00 [14.17–100.00] 0.5px
2.59 [14.17–100.00] 0.5px
5.74 [8.25–13.92] 0.5px
5.74 [14.17–100.00] 0.5px
8.23 [14.17–100.00] 0.5px
11.38 [8.25–10.18] 0.5px
11.38 [14.17–17.63] 0.5px
11.38 [24.79–28.37] 0.5px
11.38 [35.53–39.12] 0.5px
11.38 [46.28–49.86] 0.5px
11.38 [57.02–60.60] 0.5px
11.38 [67.77–71.35] 0.5px
11.38 [78.51–82.09] 0.5px
11.38 [89.26–92.84] 0.5px
13.97 [14.17–17.63] 0.5px
13.97 [24.79–28.37] 0.5px
13.97 [35.53–39.12] 0.5px
13.97 [46.28–49.86] 0.5px
13.97 [57.02–60.60] 0.5px
13.97 [67.77–71.35] 0.5px
13.97 [78.51–82.09] 0.5px
13.97 [89.26–92.84] 0.5px
17.11 [10.18–12.11] 0.5px
17.11 [17.63–21.21] 0.5px
17.11 [28.37–31.95] 0.5px
17.11 [39.12–42.70] 0.5px
17.11 [49.86–53.44] 0.5px
17.11 [60.60–64.19] 0.5px
17.11 [71.35–74.93] 0.5px
17.11 [82.09–85.67] 0.5px
17.11 [92.84–96.42] 0.5px
19.61 [17.63–21.21] 0.5px
19.61 [28.37–31.95] 0.5px
19.61 [39.12–42.70] 0.5px
19.61 [49.86–53.44] 0.5px
19.61 [60.60–64.19] 0.5px
19.61 [71.35–74.93] 0.5px
19.61 [82.09–85.67] 0.5px
19.61 [92.84–96.42] 0.5px
22.76 [8.25–13.92] 0.5px
22.76 [14.17–100.00] 0.5px
25.35 [14.17–100.00] 0.5px
49.49 [0.00–3.02] 0.5px
51.62 [8.25–13.92] 0.5px
51.62 [14.17–100.00] 0.5px
54.21 [14.17–100.00] 0.5px
59.30 [0.00–3.02] 0.5px
61.89 [0.00–3.02] 0.5px
63.00 [8.25–10.18] 0.5px
63.00 [14.17–17.63] 0.5px
63.00 [24.79–28.37] 0.5px
63.00 [35.53–39.12] 0.5px
63.00 [46.28–49.86] 0.5px
63.00 [57.02–60.60] 0.5px
63.00 [67.77–71.35] 0.5px
63.00 [78.51–82.09] 0.5px
63.00 [89.26–92.84] 0.5px
65.59 [14.17–17.63] 0.5px
65.59 [24.79–28.37] 0.5px
65.59 [35.53–39.12] 0.5px
65.59 [46.28–49.86] 0.5px
65.59 [57.02–60.60] 0.5px
65.59 [67.77–71.35] 0.5px
65.59 [78.51–82.09] 0.5px
65.59 [89.26–92.84] 0.5px
74.47 [5.73–100.00] 0.5px
74.84 [5.73–100.00] 0.5px
77.24 [14.17–100.00] 0.5px
82.33 [8.25–13.92] 0.5px
82.33 [14.17–100.00] 0.5px
84.92 [0.00–3.02] 0.5px
84.92 [14.17–100.00] 0.5px
100.00 [3.27–13.92] 0.5px
100.00 [14.17–100.00] 0.5px
横罫線 86本
0.00 [49.49–84.92] 0.5px
3.02 [49.49–84.92] 0.5px
3.27 [0.00–100.00] 0.5px
5.73 [0.00–100.00] 0.5px
8.25 [0.00–74.47] 0.5px
8.25 [74.84–100.00] 0.5px
10.18 [5.74–22.76] 0.5px
10.18 [51.62–74.47] 0.5px
11.15 [22.76–51.62] 0.5px
12.11 [5.74–22.76] 0.5px
12.11 [51.62–74.47] 0.5px
13.92 [0.00–74.47] 0.5px
13.92 [74.84–100.00] 0.5px
14.17 [0.00–74.47] 0.5px
14.17 [74.84–100.00] 0.5px
17.63 [5.74–22.76] 0.5px
17.63 [51.62–74.47] 0.5px
17.63 [74.84–100.00] 0.5px
19.40 [22.76–51.62] 0.5px
21.21 [5.74–22.76] 0.5px
21.21 [51.62–74.47] 0.5px
21.21 [74.84–100.00] 0.5px
24.79 [0.00–74.47] 0.5px
24.79 [74.84–100.00] 0.5px
28.37 [5.74–22.76] 0.5px
28.37 [51.62–74.47] 0.5px
28.37 [74.84–100.00] 0.5px
30.15 [22.76–51.62] 0.5px
31.95 [5.74–22.76] 0.5px
31.95 [51.62–74.47] 0.5px
31.95 [74.84–100.00] 0.5px
35.53 [0.00–74.47] 0.5px
35.53 [74.84–100.00] 0.5px
39.12 [5.74–22.76] 0.5px
39.12 [51.62–74.47] 0.5px
39.12 [74.84–100.00] 0.5px
40.89 [22.76–51.62] 0.5px
42.70 [5.74–22.76] 0.5px
42.70 [51.62–74.47] 0.5px
42.70 [74.84–100.00] 0.5px
46.28 [0.00–74.47] 0.5px
46.28 [74.84–100.00] 0.5px
49.86 [5.74–22.76] 0.5px
49.86 [51.62–74.47] 0.5px
49.86 [74.84–100.00] 0.5px
51.64 [22.76–51.62] 0.5px
53.44 [5.74–22.76] 0.5px
53.44 [51.62–74.47] 0.5px
53.44 [74.84–100.00] 0.5px
57.02 [0.00–74.47] 0.5px
57.02 [74.84–100.00] 0.5px
60.60 [5.74–22.76] 0.5px
60.60 [51.62–74.47] 0.5px
60.60 [74.84–100.00] 0.5px
62.38 [22.76–51.62] 0.5px
64.19 [5.74–22.76] 0.5px
64.19 [51.62–74.47] 0.5px
64.19 [74.84–100.00] 0.5px
67.77 [0.00–74.47] 0.5px
67.77 [74.84–100.00] 0.5px
71.35 [5.74–22.76] 0.5px
71.35 [51.62–74.47] 0.5px
71.35 [74.84–100.00] 0.5px
73.12 [22.76–51.62] 0.5px
74.93 [5.74–22.76] 0.5px
74.93 [51.62–74.47] 0.5px
74.93 [74.84–100.00] 0.5px
78.51 [0.00–74.47] 0.5px
78.51 [74.84–100.00] 0.5px
82.09 [5.74–22.76] 0.5px
82.09 [51.62–74.47] 0.5px
82.09 [74.84–100.00] 0.5px
83.87 [22.76–51.62] 0.5px
85.67 [5.74–22.76] 0.5px
85.67 [51.62–74.47] 0.5px
85.67 [74.84–100.00] 0.5px
89.26 [0.00–74.47] 0.5px
89.26 [74.84–100.00] 0.5px
92.84 [5.74–22.76] 0.5px
92.84 [51.62–74.47] 0.5px
92.84 [74.84–100.00] 0.5px
94.61 [22.76–51.62] 0.5px
96.42 [5.74–22.76] 0.5px
96.42 [51.62–74.47] 0.5px
96.42 [74.84–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第13表 の罫線が変わっていない 1`] = `
"セル 326個 / 格子 縦32本 横39本
寄せで動いたセル 30個（最大 0.046％）
縦罫線 53本
0.00 [2.25–32.08] 0.5px
0.00 [32.44–64.68] 0.5px
0.00 [65.05–100.00] 0.5px
1.92 [12.10–28.34] 0.5px
1.92 [40.97–60.95] 0.5px
3.93 [71.23–93.65] 0.5px
7.85 [7.61–28.34] 0.5px
9.77 [12.10–28.34] 0.5px
15.71 [7.61–32.08] 0.5px
15.71 [39.09–64.68] 0.5px
17.63 [12.10–28.34] 0.5px
17.63 [40.97–60.95] 0.5px
21.55 [71.23–97.39] 0.5px
23.56 [67.49–97.39] 0.5px
25.48 [71.23–97.39] 0.5px
27.49 [9.85–32.08] 0.5px
29.41 [12.10–28.34] 0.5px
39.27 [37.24–64.68] 0.5px
39.27 [67.49–97.39] 0.5px
41.19 [40.97–60.95] 0.5px
41.19 [67.49–97.39] 0.5px
45.11 [7.61–32.08] 0.5px
47.12 [12.10–28.34] 0.5px
47.12 [40.97–60.95] 0.5px
51.05 [12.10–28.34] 0.5px
51.05 [40.97–60.95] 0.5px
54.98 [12.10–28.34] 0.5px
54.98 [40.97–60.95] 0.5px
54.98 [67.49–97.39] 0.5px
56.89 [67.49–97.39] 0.5px
58.90 [12.10–28.34] 0.5px
58.90 [37.24–64.68] 0.5px
60.82 [0.00–2.25] 0.5px
60.82 [40.97–64.68] 0.5px
62.83 [7.61–32.08] 0.5px
64.75 [12.10–32.08] 0.5px
70.68 [67.49–97.39] 0.5px
72.60 [67.49–97.39] 0.5px
74.61 [0.00–2.25] 0.5px
76.53 [0.00–2.25] 0.5px
76.53 [5.36–32.08] 0.5px
76.53 [34.99–64.68] 0.5px
78.54 [12.10–28.34] 0.5px
78.54 [40.97–60.95] 0.5px
86.39 [67.49–97.39] 0.5px
88.31 [7.61–32.08] 0.5px
88.31 [37.24–64.68] 0.5px
88.31 [67.49–97.39] 0.5px
90.32 [12.10–28.34] 0.5px
90.32 [40.97–60.95] 0.5px
100.00 [0.00–32.08] 0.5px
100.00 [32.44–64.68] 0.5px
100.00 [65.05–100.00] 0.5px
横罫線 39本
0.00 [60.82–100.00] 0.5px
2.25 [0.00–100.00] 0.5px
5.36 [0.00–100.00] 0.5px
7.61 [0.00–100.00] 0.5px
9.85 [15.71–62.83] 0.5px
12.10 [0.00–100.00] 0.5px
13.39 [45.11–62.83] 0.5px
15.26 [45.11–62.83] 0.5px
17.13 [0.00–100.00] 0.5px
19.00 [45.11–62.83] 0.5px
20.87 [0.00–100.00] 0.5px
22.73 [45.11–62.83] 0.5px
24.60 [0.00–100.00] 0.5px
26.47 [45.11–62.83] 0.5px
28.34 [0.00–100.00] 0.5px
32.08 [0.00–100.00] 0.5px
32.44 [0.00–100.00] 0.5px
34.99 [0.00–100.00] 0.5px
37.24 [0.00–100.00] 0.5px
39.09 [0.00–39.27] 0.5px
40.97 [0.00–100.00] 0.5px
42.26 [39.27–58.90] 0.5px
46.00 [0.00–100.00] 0.5px
49.74 [0.00–100.00] 0.5px
53.47 [0.00–100.00] 0.5px
57.21 [0.00–100.00] 0.5px
60.95 [0.00–100.00] 0.5px
64.68 [0.00–100.00] 0.5px
65.05 [0.00–100.00] 0.5px
67.49 [0.00–100.00] 0.5px
71.23 [0.00–100.00] 0.5px
74.97 [3.93–100.00] 0.5px
78.70 [3.93–100.00] 0.5px
82.44 [0.00–100.00] 0.5px
86.18 [3.93–100.00] 0.5px
89.91 [3.93–100.00] 0.5px
93.65 [0.00–100.00] 0.5px
97.39 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第14表 の罫線が変わっていない 1`] = `
"セル 282個 / 格子 縦51本 横39本
寄せで動いたセル 29個（最大 0.129％）
縦罫線 85本
0.00 [2.69–51.22] 0.5px
0.00 [51.75–71.28] 0.5px
0.00 [71.80–100.00] 0.5px
1.77 [10.17–29.80] 0.5px
1.77 [41.75–49.27] 0.5px
1.77 [59.43–67.33] 0.5px
1.77 [75.26–81.76] 0.5px
1.77 [84.77–94.34] 0.5px
3.66 [14.12–29.80] 0.5px
3.66 [43.33–47.27] 0.5px
3.66 [75.26–81.76] 0.5px
5.47 [43.33–47.27] 0.5px
5.47 [84.77–94.34] 0.5px
7.37 [75.26–81.76] 0.5px
9.18 [57.48–71.28] 0.5px
9.18 [84.77–94.34] 0.5px
11.08 [10.17–37.81] 0.5px
11.08 [59.43–67.33] 0.5px
12.89 [12.05–29.80] 0.5px
12.89 [84.77–94.34] 0.5px
14.78 [43.33–47.27] 0.5px
16.59 [12.05–29.80] 0.5px
16.59 [83.05–98.32] 0.5px
18.49 [57.48–71.28] 0.5px
18.49 [86.44–94.34] 0.5px
20.30 [12.05–29.80] 0.5px
20.30 [59.43–67.33] 0.5px
22.20 [29.80–37.81] 0.5px
24.01 [12.05–29.80] 0.5px
24.01 [33.86–37.81] 0.5px
24.01 [84.77–98.32] 0.5px
25.91 [86.44–94.34] 0.5px
27.72 [10.17–29.80] 0.5px
29.61 [14.12–29.80] 0.5px
31.42 [84.77–98.32] 0.5px
33.32 [86.44–94.34] 0.5px
35.13 [12.05–29.80] 0.5px
37.03 [14.12–37.81] 0.5px
38.84 [29.80–37.81] 0.5px
38.84 [57.48–71.28] 0.5px
40.73 [59.43–67.33] 0.5px
42.54 [12.05–29.80] 0.5px
44.44 [14.12–29.80] 0.5px
44.44 [84.77–98.32] 0.5px
46.25 [43.33–47.27] 0.5px
46.25 [57.48–67.33] 0.5px
46.25 [86.44–94.34] 0.5px
48.15 [43.33–47.27] 0.5px
48.15 [59.43–67.33] 0.5px
49.96 [57.48–71.28] 0.5px
51.85 [43.33–47.27] 0.5px
51.85 [59.43–71.28] 0.5px
51.85 [84.77–94.34] 0.5px
53.66 [29.80–37.81] 0.5px
53.66 [86.44–94.34] 0.5px
55.56 [29.80–37.81] 0.5px
55.56 [84.77–98.32] 0.5px
57.37 [12.05–29.80] 0.5px
57.37 [86.44–98.32] 0.5px
59.27 [0.00–2.69] 0.5px
59.27 [14.12–29.80] 0.5px
62.97 [12.05–29.80] 0.5px
64.87 [14.12–29.80] 0.5px
66.68 [12.05–29.80] 0.5px
68.49 [14.12–29.80] 0.5px
68.49 [55.49–71.28] 0.5px
68.49 [83.05–98.32] 0.5px
70.39 [29.80–37.81] 0.5px
70.39 [59.43–67.33] 0.5px
70.39 [86.44–94.34] 0.5px
72.20 [29.80–37.81] 0.5px
74.09 [0.00–2.69] 0.5px
75.91 [0.00–2.69] 0.5px
77.80 [10.17–29.80] 0.5px
79.61 [14.12–29.80] 0.5px
85.22 [29.80–37.81] 0.5px
87.03 [29.80–37.81] 0.5px
88.92 [10.17–29.80] 0.5px
90.73 [14.12–29.80] 0.5px
90.73 [83.05–98.32] 0.5px
92.63 [86.44–94.34] 0.5px
98.19 [41.75–49.27] 0.5px
100.00 [0.00–51.22] 0.5px
100.00 [51.75–71.28] 0.5px
100.00 [71.80–100.00] 0.5px
横罫線 37本
0.00 [59.27–100.00] 0.5px
2.69 [0.00–100.00] 0.5px
10.17 [0.00–100.00] 0.5px
12.05 [11.08–77.80] 0.5px
14.12 [0.00–100.00] 0.5px
18.06 [0.00–100.00] 0.5px
22.01 [0.00–100.00] 0.5px
25.96 [0.00–100.00] 0.5px
29.80 [0.00–100.00] 0.5px
33.86 [11.08–100.00] 0.5px
37.81 [0.00–100.00] 0.5px
41.75 [1.77–98.19] 0.5px
43.33 [3.66–14.78] 0.5px
43.33 [46.25–51.85] 0.5px
47.27 [3.66–14.78] 0.5px
47.27 [46.25–51.85] 0.5px
49.27 [1.77–98.19] 0.5px
51.22 [0.00–100.00] 0.5px
51.75 [0.00–100.00] 0.5px
55.49 [0.00–100.00] 0.5px
57.48 [0.00–68.49] 0.5px
59.43 [0.00–100.00] 0.5px
63.38 [0.00–100.00] 0.5px
67.33 [0.00–100.00] 0.5px
71.28 [0.00–100.00] 0.5px
71.80 [0.00–100.00] 0.5px
75.26 [1.77–7.37] 0.5px
77.43 [1.77–7.37] 0.5px
79.59 [1.77–7.37] 0.5px
81.76 [1.77–7.37] 0.5px
83.05 [0.00–100.00] 0.5px
84.77 [0.00–68.49] 0.5px
86.44 [0.00–100.00] 0.5px
90.39 [0.00–100.00] 0.5px
94.34 [0.00–100.00] 0.5px
98.32 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第15表 の罫線が変わっていない 1`] = `
"セル 248個 / 格子 縦14本 横41本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 16本
0.00 [2.65–100.00] 0.5px
2.32 [2.65–60.67] 0.5px
2.32 [65.59–77.89] 0.5px
2.32 [85.25–92.64] 0.5px
6.86 [23.81–28.73] 0.5px
9.09 [45.92–50.84] 0.5px
20.50 [2.65–100.00] 0.5px
22.73 [0.00–100.00] 0.5px
25.05 [6.59–100.00] 0.5px
34.14 [0.00–2.65] 0.5px
36.36 [0.00–2.65] 0.5px
61.41 [0.00–100.00] 0.5px
63.64 [6.59–100.00] 0.5px
70.50 [2.65–6.59] 0.5px
72.73 [2.65–6.59] 0.5px
100.00 [2.65–100.00] 0.5px
横罫線 41本
0.00 [22.73–61.41] 0.5px
2.65 [0.00–100.00] 0.5px
6.59 [0.00–100.00] 0.5px
9.07 [2.32–100.00] 0.5px
11.51 [2.32–100.00] 0.5px
13.98 [2.32–100.00] 0.5px
16.42 [2.32–100.00] 0.5px
18.90 [2.32–100.00] 0.5px
21.34 [2.32–100.00] 0.5px
23.81 [2.32–100.00] 0.5px
26.26 [6.86–100.00] 0.5px
28.73 [0.00–100.00] 0.5px
31.17 [2.32–100.00] 0.5px
33.65 [0.00–100.00] 0.5px
36.09 [2.32–100.00] 0.5px
38.56 [2.32–100.00] 0.5px
41.00 [2.32–100.00] 0.5px
43.48 [2.32–100.00] 0.5px
45.92 [0.00–100.00] 0.5px
48.40 [9.09–100.00] 0.5px
50.84 [2.32–100.00] 0.5px
53.31 [2.32–100.00] 0.5px
55.75 [2.32–100.00] 0.5px
58.23 [2.32–100.00] 0.5px
60.67 [0.00–100.00] 0.5px
63.15 [0.00–100.00] 0.5px
65.59 [0.00–100.00] 0.5px
68.06 [2.32–100.00] 0.5px
70.50 [2.32–100.00] 0.5px
72.98 [2.32–100.00] 0.5px
75.42 [2.32–100.00] 0.5px
77.89 [0.00–100.00] 0.5px
80.33 [0.00–100.00] 0.5px
82.81 [0.00–100.00] 0.5px
85.25 [0.00–100.00] 0.5px
87.73 [2.32–100.00] 0.5px
90.17 [2.32–100.00] 0.5px
92.64 [0.00–100.00] 0.5px
95.08 [0.00–100.00] 0.5px
97.56 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;

exports[`様式の罫線 > 第15表（続） の罫線が変わっていない 1`] = `
"セル 250個 / 格子 縦15本 横41本
寄せで動いたセル 0個（最大 0.000％）
縦罫線 17本
0.00 [2.65–100.00] 0.5px
2.32 [2.65–60.67] 0.5px
2.32 [65.59–77.89] 0.5px
2.32 [85.25–92.64] 0.5px
6.86 [23.81–28.73] 0.5px
9.09 [45.92–50.84] 0.5px
20.50 [2.65–100.00] 0.5px
22.73 [0.00–100.00] 0.5px
25.05 [6.59–100.00] 0.5px
31.82 [2.65–6.59] 0.5px
34.14 [0.00–6.59] 0.5px
36.36 [0.00–2.65] 0.5px
61.41 [0.00–100.00] 0.5px
63.64 [6.59–100.00] 0.5px
70.50 [2.65–6.59] 0.5px
72.73 [2.65–6.59] 0.5px
100.00 [2.65–100.00] 0.5px
横罫線 41本
0.00 [22.73–61.41] 0.5px
2.65 [0.00–100.00] 0.5px
6.59 [0.00–100.00] 0.5px
9.07 [2.32–100.00] 0.5px
11.51 [2.32–100.00] 0.5px
13.98 [2.32–100.00] 0.5px
16.42 [2.32–100.00] 0.5px
18.90 [2.32–100.00] 0.5px
21.34 [2.32–100.00] 0.5px
23.81 [2.32–100.00] 0.5px
26.26 [6.86–100.00] 0.5px
28.73 [0.00–100.00] 0.5px
31.17 [2.32–100.00] 0.5px
33.65 [0.00–100.00] 0.5px
36.09 [2.32–100.00] 0.5px
38.56 [2.32–100.00] 0.5px
41.00 [2.32–100.00] 0.5px
43.48 [2.32–100.00] 0.5px
45.92 [0.00–100.00] 0.5px
48.40 [9.09–100.00] 0.5px
50.84 [2.32–100.00] 0.5px
53.31 [2.32–100.00] 0.5px
55.75 [2.32–100.00] 0.5px
58.23 [2.32–100.00] 0.5px
60.67 [0.00–100.00] 0.5px
63.15 [0.00–100.00] 0.5px
65.59 [0.00–100.00] 0.5px
68.06 [2.32–100.00] 0.5px
70.50 [2.32–100.00] 0.5px
72.98 [2.32–100.00] 0.5px
75.42 [2.32–100.00] 0.5px
77.89 [0.00–100.00] 0.5px
80.33 [0.00–100.00] 0.5px
82.81 [0.00–100.00] 0.5px
85.25 [0.00–100.00] 0.5px
87.73 [2.32–100.00] 0.5px
90.17 [2.32–100.00] 0.5px
92.64 [0.00–100.00] 0.5px
95.08 [0.00–100.00] 0.5px
97.56 [0.00–100.00] 0.5px
100.00 [0.00–100.00] 0.5px"
`;
